@@ -22,17 +22,11 @@
 package io.crate.execution.ddl.tables;
 
 import static io.crate.testing.Asserts.assertThat;
-import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import java.util.List;
 
-import org.elasticsearch.Version;
-import org.elasticsearch.cluster.ClusterModule;
 import org.elasticsearch.cluster.ClusterState;
-import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.xcontent.NamedXContentRegistry;
-import org.elasticsearch.index.MapperTestUtils;
 import org.junit.Test;
 
 import io.crate.exceptions.ColumnUnknownException;
@@ -46,9 +40,7 @@ import io.crate.metadata.RowGranularity;
 import io.crate.metadata.SimpleReference;
 import io.crate.metadata.doc.DocTableInfo;
 import io.crate.metadata.doc.DocTableInfoFactory;
-import io.crate.sql.tree.ColumnPolicy;
 import io.crate.test.integration.CrateDummyClusterServiceUnitTest;
-import io.crate.testing.IndexEnv;
 import io.crate.testing.SQLExecutor;
 import io.crate.types.DataTypes;
 
@@ -60,22 +52,15 @@ public class RenameColumnTaskTest extends CrateDummyClusterServiceUnitTest {
         var e = SQLExecutor.of(clusterService)
             .addTable("create table tbl (x int)");
         DocTableInfo tbl = e.resolveTableInfo("tbl");
-        try (IndexEnv indexEnv = new IndexEnv(
-            THREAD_POOL,
-            tbl,
-            clusterService.state(),
-            Version.CURRENT
-        )) {
-            var renameColumnTask = new AlterTableTask<>(
-                e.nodeCtx, imd -> indexEnv.mapperService(), tbl.ident(), TransportRenameColumnAction.RENAME_COLUMN_OPERATOR);
-            Reference refToRename = tbl.getReference(new ColumnIdent("x"));
-            var newName = new ColumnIdent("y");
-            var request = new RenameColumnRequest(tbl.ident(), refToRename, newName);
-            ClusterState newState = renameColumnTask.execute(clusterService.state(), request);
-            DocTableInfo newTable = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
-            assertThat(newTable.getReference(refToRename.column())).isNull();
-            assertThat(newTable.getReference(newName)).isReference().hasName(newName.sqlFqn());
-        }
+        var renameColumnTask = new AlterTableTask<>(
+            e.nodeCtx, tbl.ident(), TransportRenameColumnAction.RENAME_COLUMN_OPERATOR);
+        Reference refToRename = tbl.getReference(ColumnIdent.of("x"));
+        var newName = ColumnIdent.of("y");
+        var request = new RenameColumnRequest(tbl.ident(), refToRename, newName);
+        ClusterState newState = renameColumnTask.execute(clusterService.state(), request);
+        DocTableInfo newTable = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
+        assertThat(newTable.getReference(refToRename.column())).isNull();
+        assertThat(newTable.getReference(newName)).hasName(newName.sqlFqn());
     }
 
     @Test
@@ -87,38 +72,31 @@ public class RenameColumnTaskTest extends CrateDummyClusterServiceUnitTest {
         var e = SQLExecutor.of(clusterService)
             .addTable("create table tbl (o object as (o2 object as (x int)))");
         DocTableInfo tbl = e.resolveTableInfo("tbl");
-        try (IndexEnv indexEnv = new IndexEnv(
-            THREAD_POOL,
-            tbl,
-            clusterService.state(),
-            Version.CURRENT
-        )) {
-            var renameColumnTask = new AlterTableTask<>(
-                e.nodeCtx, imd -> indexEnv.mapperService(), tbl.ident(), TransportRenameColumnAction.RENAME_COLUMN_OPERATOR);
-            Reference refToRename1 = tbl.getReference(new ColumnIdent("o"));
-            var newName1 = new ColumnIdent("p");
-            var request = new RenameColumnRequest(tbl.ident(), refToRename1, newName1);
-            ClusterState newState = renameColumnTask.execute(clusterService.state(), request);
-            tbl = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
-            assertThat(tbl.getReference(refToRename1.column())).isNull();
-            assertThat(tbl.getReference(newName1)).isReference().hasName(newName1.sqlFqn());
+        var renameColumnTask = new AlterTableTask<>(
+            e.nodeCtx, tbl.ident(), TransportRenameColumnAction.RENAME_COLUMN_OPERATOR);
+        Reference refToRename1 = tbl.getReference(ColumnIdent.of("o"));
+        var newName1 = ColumnIdent.of("p");
+        var request = new RenameColumnRequest(tbl.ident(), refToRename1, newName1);
+        ClusterState newState = renameColumnTask.execute(clusterService.state(), request);
+        tbl = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
+        assertThat(tbl.getReference(refToRename1.column())).isNull();
+        assertThat(tbl.getReference(newName1)).hasName(newName1.sqlFqn());
 
-            Reference refToRename2 = tbl.getReference(new ColumnIdent("p", List.of("o2")));
-            var newName2 = new ColumnIdent("p", List.of("p2"));
-            request = new RenameColumnRequest(tbl.ident(), refToRename2, newName2);
-            newState = renameColumnTask.execute(newState, request);
-            tbl = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
-            assertThat(tbl.getReference(refToRename2.column())).isNull();
-            assertThat(tbl.getReference(newName2)).isReference().hasName(newName2.sqlFqn());
+        Reference refToRename2 = tbl.getReference(ColumnIdent.of("p", List.of("o2")));
+        var newName2 = ColumnIdent.of("p", List.of("p2"));
+        request = new RenameColumnRequest(tbl.ident(), refToRename2, newName2);
+        newState = renameColumnTask.execute(newState, request);
+        tbl = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
+        assertThat(tbl.getReference(refToRename2.column())).isNull();
+        assertThat(tbl.getReference(newName2)).hasName(newName2.sqlFqn());
 
-            Reference refToRename3 = tbl.getReference(new ColumnIdent("p", List.of("p2", "x")));
-            var newName3 = new ColumnIdent("p", List.of("p2", "y"));
-            request = new RenameColumnRequest(tbl.ident(), refToRename3, newName3);
-            newState = renameColumnTask.execute(newState, request);
-            tbl = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
-            assertThat(tbl.getReference(refToRename3.column())).isNull();
-            assertThat(tbl.getReference(newName3)).isReference().hasName(newName3.sqlFqn());
-        }
+        Reference refToRename3 = tbl.getReference(ColumnIdent.of("p", List.of("p2", "x")));
+        var newName3 = ColumnIdent.of("p", List.of("p2", "y"));
+        request = new RenameColumnRequest(tbl.ident(), refToRename3, newName3);
+        newState = renameColumnTask.execute(newState, request);
+        tbl = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
+        assertThat(tbl.getReference(refToRename3.column())).isNull();
+        assertThat(tbl.getReference(newName3)).hasName(newName3.sqlFqn());
     }
 
     @Test
@@ -129,34 +107,31 @@ public class RenameColumnTaskTest extends CrateDummyClusterServiceUnitTest {
                 new PartitionName(new RelationName("doc", "tbl"), List.of("1", "2")).asIndexName(),
                 new PartitionName(new RelationName("doc", "tbl"), List.of("3", "4")).asIndexName());
         DocTableInfo tbl = e.resolveTableInfo("doc.tbl");
-        var renameColumnTask = new AlterTableTask<>(e.nodeCtx, imd -> MapperTestUtils.newMapperService(
-            new NamedXContentRegistry(ClusterModule.getNamedXWriteables()),
-            createTempDir(),
-            Settings.EMPTY,
-            "doc.tbl"),
+        var renameColumnTask = new AlterTableTask<>(
+            e.nodeCtx,
             tbl.ident(),
             TransportRenameColumnAction.RENAME_COLUMN_OPERATOR);
-        Reference refToRename = tbl.getReference(new ColumnIdent("x"));
-        var newName = new ColumnIdent("y");
+        Reference refToRename = tbl.getReference(ColumnIdent.of("x"));
+        var newName = ColumnIdent.of("y");
         var request = new RenameColumnRequest(tbl.ident(), refToRename, newName);
         ClusterState newState = renameColumnTask.execute(clusterService.state(), request);
         DocTableInfo newTable = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
         assertThat(newTable.getReference(refToRename.column())).isNull();
         assertThat(newTable.partitionedBy()).doesNotContain(refToRename.column());
-        assertThat(newTable.getReference(newName)).isReference().hasName(newName.name());
+        assertThat(newTable.getReference(newName)).hasName(newName.name());
         assertThat(newTable.partitionedBy()).doesNotContain(refToRename.column()).contains(newName);
 
         // alter table tbl rename column o to p;
         // -- causes partitioned by col to be renamed: o['o2']['x'] -> p['o2']['x']
-        refToRename = tbl.getReference(new ColumnIdent("o"));
-        newName = new ColumnIdent("p");
-        var oldNameOfChild = new ColumnIdent("o", List.of("o2", "x"));
-        var newNameOfChild = new ColumnIdent("p", List.of("o2", "x"));
+        refToRename = tbl.getReference(ColumnIdent.of("o"));
+        newName = ColumnIdent.of("p");
+        var oldNameOfChild = ColumnIdent.of("o", List.of("o2", "x"));
+        var newNameOfChild = ColumnIdent.of("p", List.of("o2", "x"));
         request = new RenameColumnRequest(tbl.ident(), refToRename, newName);
         newState = renameColumnTask.execute(newState, request);
         newTable = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
         assertThat(newTable.getReference(oldNameOfChild)).isNull();
-        assertThat(newTable.getReference(newName)).isReference().hasName(newNameOfChild.name());
+        assertThat(newTable.getReference(newName)).hasName(newNameOfChild.name());
         assertThat(newTable.partitionedBy()).doesNotContain(oldNameOfChild).contains(newNameOfChild);
     }
 
@@ -167,25 +142,18 @@ public class RenameColumnTaskTest extends CrateDummyClusterServiceUnitTest {
         var e = SQLExecutor.of(clusterService)
             .addTable("create table tbl (o object as (o2 object as (o3 object as (x int primary key))), a int primary key)");
         DocTableInfo tbl = e.resolveTableInfo("tbl");
-        try (IndexEnv indexEnv = new IndexEnv(
-            THREAD_POOL,
-            tbl,
-            clusterService.state(),
-            Version.CURRENT
-        )) {
-            var renameColumnTask = new AlterTableTask<>(
-                e.nodeCtx, imd -> indexEnv.mapperService(), tbl.ident(), TransportRenameColumnAction.RENAME_COLUMN_OPERATOR);
-            Reference refToRename = tbl.getReference(new ColumnIdent("o", List.of("o2")));
-            var newName = new ColumnIdent("o", List.of("p2"));
-            var request = new RenameColumnRequest(tbl.ident(), refToRename, newName);
-            ClusterState newState = renameColumnTask.execute(clusterService.state(), request);
-            DocTableInfo newTable = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
-            var oldPkCol = new ColumnIdent("o", List.of("o2", "o3", "x"));
-            var newPkCol = new ColumnIdent("o", List.of("p2", "o3", "x"));
-            assertThat(newTable.getReference(refToRename.column())).isNull();
-            assertThat(newTable.getReference(newName)).isReference().hasName(newName.sqlFqn());
-            assertThat(newTable.primaryKey()).doesNotContain(oldPkCol).contains(newPkCol);
-        }
+        var renameColumnTask = new AlterTableTask<>(
+            e.nodeCtx, tbl.ident(), TransportRenameColumnAction.RENAME_COLUMN_OPERATOR);
+        Reference refToRename = tbl.getReference(ColumnIdent.of("o", List.of("o2")));
+        var newName = ColumnIdent.of("o", List.of("p2"));
+        var request = new RenameColumnRequest(tbl.ident(), refToRename, newName);
+        ClusterState newState = renameColumnTask.execute(clusterService.state(), request);
+        DocTableInfo newTable = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
+        var oldPkCol = ColumnIdent.of("o", List.of("o2", "o3", "x"));
+        var newPkCol = ColumnIdent.of("o", List.of("p2", "o3", "x"));
+        assertThat(newTable.getReference(refToRename.column())).isNull();
+        assertThat(newTable.getReference(newName)).hasName(newName.sqlFqn());
+        assertThat(newTable.primaryKey()).doesNotContain(oldPkCol).contains(newPkCol);
     }
 
     @Test
@@ -196,30 +164,23 @@ public class RenameColumnTaskTest extends CrateDummyClusterServiceUnitTest {
         var e = SQLExecutor.of(clusterService)
             .addTable("create table tbl (o object as (a int), constraint c_1 check (o['a'] > 1))");
         DocTableInfo tbl = e.resolveTableInfo("tbl");
-        try (IndexEnv indexEnv = new IndexEnv(
-            THREAD_POOL,
-            tbl,
-            clusterService.state(),
-            Version.CURRENT
-        )) {
-            var renameColumnTask = new AlterTableTask<>(
-                e.nodeCtx, imd -> indexEnv.mapperService(), tbl.ident(), TransportRenameColumnAction.RENAME_COLUMN_OPERATOR);
-            Reference refToRename = tbl.getReference(new ColumnIdent("o", List.of("a")));
-            var newName = new ColumnIdent("o", List.of("b"));
-            var request = new RenameColumnRequest(tbl.ident(), refToRename, newName);
-            ClusterState newState = renameColumnTask.execute(clusterService.state(), request);
-            tbl = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
+        var renameColumnTask = new AlterTableTask<>(
+            e.nodeCtx, tbl.ident(), TransportRenameColumnAction.RENAME_COLUMN_OPERATOR);
+        Reference refToRename = tbl.getReference(ColumnIdent.of("o", List.of("a")));
+        var newName = ColumnIdent.of("o", List.of("b"));
+        var request = new RenameColumnRequest(tbl.ident(), refToRename, newName);
+        ClusterState newState = renameColumnTask.execute(clusterService.state(), request);
+        tbl = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
 
-            refToRename = tbl.getReference(new ColumnIdent("o"));
-            newName = new ColumnIdent("p");
-            request = new RenameColumnRequest(tbl.ident(), refToRename, newName);
-            newState = renameColumnTask.execute(newState, request);
-            tbl = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
+        refToRename = tbl.getReference(ColumnIdent.of("o"));
+        newName = ColumnIdent.of("p");
+        request = new RenameColumnRequest(tbl.ident(), refToRename, newName);
+        newState = renameColumnTask.execute(newState, request);
+        tbl = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
 
-            assertThat(tbl.checkConstraints().size()).isEqualTo(1);
-            assertThat(tbl.checkConstraints().get(0).toString())
-                .isEqualTo("CheckConstraint{name='c_1', expression=(p['b'] > 1)}");
-        }
+        assertThat(tbl.checkConstraints()).hasSize(1);
+        assertThat(tbl.checkConstraints().getFirst().toString())
+            .isEqualTo("CheckConstraint{name='c_1', expression=(p['b'] > 1)}");
     }
 
     @Test
@@ -229,23 +190,16 @@ public class RenameColumnTaskTest extends CrateDummyClusterServiceUnitTest {
         var e = SQLExecutor.of(clusterService)
             .addTable("create table tbl (o object as (a int, b int generated always as (o['a']+1)))");
         DocTableInfo tbl = e.resolveTableInfo("tbl");
-        try (IndexEnv indexEnv = new IndexEnv(
-            THREAD_POOL,
-            tbl,
-            clusterService.state(),
-            Version.CURRENT
-        )) {
-            var renameColumnTask = new AlterTableTask<>(
-                e.nodeCtx, imd -> indexEnv.mapperService(), tbl.ident(), TransportRenameColumnAction.RENAME_COLUMN_OPERATOR);
-            Reference refToRename = tbl.getReference(new ColumnIdent("o"));
-            var newName = new ColumnIdent("o2");
-            var request = new RenameColumnRequest(tbl.ident(), refToRename, newName);
-            ClusterState newState = renameColumnTask.execute(clusterService.state(), request);
-            DocTableInfo newTable = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
-            assertThat(newTable.generatedColumns().size()).isEqualTo(1);
-            assertThat(newTable.generatedColumns().get(0).column()).isEqualTo(new ColumnIdent("o2", List.of("b")));
-            assertThat(newTable.generatedColumns().get(0).formattedGeneratedExpression()).isEqualTo("(o2['a'] + 1)");
-        }
+        var renameColumnTask = new AlterTableTask<>(
+            e.nodeCtx, tbl.ident(), TransportRenameColumnAction.RENAME_COLUMN_OPERATOR);
+        Reference refToRename = tbl.getReference(ColumnIdent.of("o"));
+        var newName = ColumnIdent.of("o2");
+        var request = new RenameColumnRequest(tbl.ident(), refToRename, newName);
+        ClusterState newState = renameColumnTask.execute(clusterService.state(), request);
+        DocTableInfo newTable = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
+        assertThat(newTable.generatedColumns()).hasSize(1);
+        assertThat(newTable.generatedColumns().getFirst().column()).isEqualTo(ColumnIdent.of("o2", List.of("b")));
+        assertThat(newTable.generatedColumns().getFirst().formattedGeneratedExpression()).isEqualTo("(o2['a'] + 1)");
     }
 
     @Test
@@ -253,21 +207,14 @@ public class RenameColumnTaskTest extends CrateDummyClusterServiceUnitTest {
         var e = SQLExecutor.of(clusterService)
             .addTable("create table tbl (a int, b int)");
         DocTableInfo tbl = e.resolveTableInfo("tbl");
-        try (IndexEnv indexEnv = new IndexEnv(
-            THREAD_POOL,
-            tbl,
-            clusterService.state(),
-            Version.CURRENT
-        )) {
-            var renameColumnTask = new AlterTableTask<>(
-                e.nodeCtx, imd -> indexEnv.mapperService(), tbl.ident(), TransportRenameColumnAction.RENAME_COLUMN_OPERATOR);
-            Reference refToRename = tbl.getReference(new ColumnIdent("a"));
-            var newName = new ColumnIdent("b");
-            var request = new RenameColumnRequest(tbl.ident(), refToRename, newName);
-            assertThatThrownBy(() -> renameColumnTask.execute(clusterService.state(), request))
-                .isExactlyInstanceOf(IllegalArgumentException.class)
-                .hasMessage("Cannot rename column to a name that is in use");
-        }
+        var renameColumnTask = new AlterTableTask<>(
+            e.nodeCtx, tbl.ident(), TransportRenameColumnAction.RENAME_COLUMN_OPERATOR);
+        Reference refToRename = tbl.getReference(ColumnIdent.of("a"));
+        var newName = ColumnIdent.of("b");
+        var request = new RenameColumnRequest(tbl.ident(), refToRename, newName);
+        assertThatThrownBy(() -> renameColumnTask.execute(clusterService.state(), request))
+            .isExactlyInstanceOf(IllegalArgumentException.class)
+            .hasMessage("Cannot rename column to a name that is in use");
     }
 
     @Test
@@ -275,34 +222,26 @@ public class RenameColumnTaskTest extends CrateDummyClusterServiceUnitTest {
         var e = SQLExecutor.of(clusterService)
             .addTable("create table tbl (a int)");
         DocTableInfo tbl = e.resolveTableInfo("tbl");
-        try (IndexEnv indexEnv = new IndexEnv(
-            THREAD_POOL,
-            tbl,
-            clusterService.state(),
-            Version.CURRENT
-        )) {
-            var renameColumnTask = new AlterTableTask<>(
-                e.nodeCtx, imd -> indexEnv.mapperService(), tbl.ident(), TransportRenameColumnAction.RENAME_COLUMN_OPERATOR);
-            SimpleReference refToRename = new SimpleReference(
-                new ReferenceIdent(tbl.ident(), "a"),
-                RowGranularity.DOC,
-                // since the analysis, the data type of 'a' has changed from int to double
-                DataTypes.DOUBLE,
-                ColumnPolicy.DYNAMIC,
-                IndexType.PLAIN,
-                true,
-                true,
-                1,
-                1,
-                false,
-                null
-            );
-            var newName = new ColumnIdent("b");
-            var request = new RenameColumnRequest(tbl.ident(), refToRename, newName);
-            assertThatThrownBy(() -> renameColumnTask.execute(clusterService.state(), request))
-                .isExactlyInstanceOf(ColumnUnknownException.class)
-                .hasMessage("Column a unknown");
-        }
+        var renameColumnTask = new AlterTableTask<>(
+            e.nodeCtx, tbl.ident(), TransportRenameColumnAction.RENAME_COLUMN_OPERATOR);
+        SimpleReference refToRename = new SimpleReference(
+            new ReferenceIdent(tbl.ident(), "a"),
+            RowGranularity.DOC,
+            // since the analysis, the data type of 'a' has changed from int to double
+            DataTypes.DOUBLE,
+            IndexType.PLAIN,
+            true,
+            true,
+            1,
+            1,
+            false,
+            null
+        );
+        var newName = ColumnIdent.of("b");
+        var request = new RenameColumnRequest(tbl.ident(), refToRename, newName);
+        assertThatThrownBy(() -> renameColumnTask.execute(clusterService.state(), request))
+            .isExactlyInstanceOf(ColumnUnknownException.class)
+            .hasMessage("Column a unknown");
     }
 
     @Test
@@ -310,21 +249,14 @@ public class RenameColumnTaskTest extends CrateDummyClusterServiceUnitTest {
         var e = SQLExecutor.of(clusterService)
             .addTable("create table tbl (x int) clustered by (x)");
         DocTableInfo tbl = e.resolveTableInfo("tbl");
-        try (IndexEnv indexEnv = new IndexEnv(
-            THREAD_POOL,
-            tbl,
-            clusterService.state(),
-            Version.CURRENT
-        )) {
-            var renameColumnTask = new AlterTableTask<>(
-                e.nodeCtx, imd -> indexEnv.mapperService(), tbl.ident(), TransportRenameColumnAction.RENAME_COLUMN_OPERATOR);
-            Reference refToRename = tbl.getReference(new ColumnIdent("x"));
-            var newName = new ColumnIdent("y");
-            var request = new RenameColumnRequest(tbl.ident(), refToRename, newName);
-            ClusterState newState = renameColumnTask.execute(clusterService.state(), request);
-            DocTableInfo newTable = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
-            assertThat(newTable.clusteredBy()).isEqualTo(newName);
-        }
+        var renameColumnTask = new AlterTableTask<>(
+            e.nodeCtx, tbl.ident(), TransportRenameColumnAction.RENAME_COLUMN_OPERATOR);
+        Reference refToRename = tbl.getReference(ColumnIdent.of("x"));
+        var newName = ColumnIdent.of("y");
+        var request = new RenameColumnRequest(tbl.ident(), refToRename, newName);
+        ClusterState newState = renameColumnTask.execute(clusterService.state(), request);
+        DocTableInfo newTable = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
+        assertThat(newTable.clusteredBy()).isEqualTo(newName);
     }
 
     @Test
@@ -332,30 +264,23 @@ public class RenameColumnTaskTest extends CrateDummyClusterServiceUnitTest {
         var e = SQLExecutor.of(clusterService)
             .addTable("create table tbl (x text, index i using fulltext (x))");
         DocTableInfo tbl = e.resolveTableInfo("tbl");
-        try (IndexEnv indexEnv = new IndexEnv(
-            THREAD_POOL,
-            tbl,
-            clusterService.state(),
-            Version.CURRENT
-        )) {
-            var renameColumnTask = new AlterTableTask<>(
-                e.nodeCtx, imd -> indexEnv.mapperService(), tbl.ident(), TransportRenameColumnAction.RENAME_COLUMN_OPERATOR);
-            Reference refToRename = tbl.getReference(new ColumnIdent("x"));
-            var newName = new ColumnIdent("x2");
-            var request = new RenameColumnRequest(tbl.ident(), refToRename, newName);
-            ClusterState newState = renameColumnTask.execute(clusterService.state(), request);
-            tbl = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
+        var renameColumnTask = new AlterTableTask<>(
+            e.nodeCtx, tbl.ident(), TransportRenameColumnAction.RENAME_COLUMN_OPERATOR);
+        Reference refToRename = tbl.getReference(ColumnIdent.of("x"));
+        var newName = ColumnIdent.of("x2");
+        var request = new RenameColumnRequest(tbl.ident(), refToRename, newName);
+        ClusterState newState = renameColumnTask.execute(clusterService.state(), request);
+        tbl = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
 
-            refToRename = tbl.indexColumn(new ColumnIdent("i"));
-            newName = new ColumnIdent("i2");
-            request = new RenameColumnRequest(tbl.ident(), refToRename, newName);
-            newState = renameColumnTask.execute(newState, request);
-            tbl = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
+        refToRename = tbl.indexColumn(ColumnIdent.of("i"));
+        newName = ColumnIdent.of("i2");
+        request = new RenameColumnRequest(tbl.ident(), refToRename, newName);
+        newState = renameColumnTask.execute(newState, request);
+        tbl = new DocTableInfoFactory(e.nodeCtx).create(tbl.ident(), newState.metadata());
 
-            var renamedIndexColumn = tbl.indexColumn(new ColumnIdent("i2"));
-            assertThat(renamedIndexColumn.columns().size()).isEqualTo(1);
-            assertThat(renamedIndexColumn.columns().get(0)).isReference().hasName("x2");
-            assertThat(renamedIndexColumn.column()).isEqualTo(new ColumnIdent("i2"));
-        }
+        var renamedIndexColumn = tbl.indexColumn(ColumnIdent.of("i2"));
+        assertThat(renamedIndexColumn.columns()).hasSize(1);
+        assertThat(renamedIndexColumn.columns().getFirst()).hasName("x2");
+        assertThat(renamedIndexColumn.column()).isEqualTo(ColumnIdent.of("i2"));
     }
 }
