@@ -33,13 +33,16 @@ import java.util.function.UnaryOperator;
 import org.elasticsearch.common.bytes.BytesArray;
 import org.elasticsearch.test.ESTestCase;
 import org.junit.Test;
+import org.locationtech.spatial4j.shape.Point;
 
 import io.crate.common.collections.Maps;
 import io.crate.metadata.ColumnIdent;
 import io.crate.sql.tree.BitString;
+import io.crate.sql.tree.ColumnPolicy;
 import io.crate.types.ArrayType;
 import io.crate.types.BitStringType;
 import io.crate.types.DataTypes;
+import io.crate.types.GeoPointType;
 import io.crate.types.ObjectType;
 import io.crate.types.UndefinedType;
 
@@ -47,8 +50,8 @@ public class SourceParserTest extends ESTestCase {
 
     @Test
     public void test_extract_single_value_from_json_with_multiple_columns() throws Exception {
-        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity());
-        var column = new ColumnIdent("_doc", List.of("x"));
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity(), true);
+        var column = ColumnIdent.of("_doc", List.of("x"));
         sourceParser.register(column, DataTypes.INTEGER);
         Map<String, Object> result = sourceParser.parse(new BytesArray(
             """
@@ -61,9 +64,9 @@ public class SourceParserTest extends ESTestCase {
 
     @Test
     public void test_unnecessary_leafs_of_object_columns_are_not_collected() throws Exception {
-        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity());
-        var x = new ColumnIdent("_doc", List.of("obj", "x"));
-        var z = new ColumnIdent("_doc", List.of("obj", "z"));
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity(), true);
+        var x = ColumnIdent.of("_doc", List.of("obj", "x"));
+        var z = ColumnIdent.of("_doc", List.of("obj", "z"));
         sourceParser.register(x, DataTypes.INTEGER);
         sourceParser.register(z, DataTypes.LONG);
         Map<String, Object> result = sourceParser.parse(new BytesArray(
@@ -78,9 +81,9 @@ public class SourceParserTest extends ESTestCase {
 
     @Test
     public void test_full_object_is_collected_if_full_object_requested() throws Exception {
-        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity());
-        var obj = new ColumnIdent("_doc", List.of("obj"));
-        var x = new ColumnIdent("_doc", List.of("obj", "x"));
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity(), true);
+        var obj = ColumnIdent.of("_doc", List.of("obj"));
+        var x = ColumnIdent.of("_doc", List.of("obj", "x"));
         // the order in which the columns are registered must not matter
         boolean xFirst = randomBoolean();
         if (xFirst) {
@@ -101,15 +104,15 @@ public class SourceParserTest extends ESTestCase {
 
     @Test
     public void test_string_encoded_numbers_will_be_parsed_by_data_type() {
-        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity());
-        sourceParser.register(new ColumnIdent("_doc", List.of("i")), DataTypes.INTEGER);
-        sourceParser.register(new ColumnIdent("_doc", List.of("l")), DataTypes.LONG);
-        sourceParser.register(new ColumnIdent("_doc", List.of("f")), DataTypes.FLOAT);
-        sourceParser.register(new ColumnIdent("_doc", List.of("d")), DataTypes.DOUBLE);
-        sourceParser.register(new ColumnIdent("_doc", List.of("s")), DataTypes.SHORT);
-        sourceParser.register(new ColumnIdent("_doc", List.of("b")), DataTypes.BYTE);
-        sourceParser.register(new ColumnIdent("_doc", List.of("ts")), DataTypes.TIMESTAMP);
-        sourceParser.register(new ColumnIdent("_doc", List.of("tsz")), DataTypes.TIMESTAMPZ);
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity(), true);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("i")), DataTypes.INTEGER);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("l")), DataTypes.LONG);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("f")), DataTypes.FLOAT);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("d")), DataTypes.DOUBLE);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("s")), DataTypes.SHORT);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("b")), DataTypes.BYTE);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("ts")), DataTypes.TIMESTAMP);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("tsz")), DataTypes.TIMESTAMPZ);
         Map<String, Object> result = sourceParser.parse(new BytesArray(
             """
             {"i": "1", "l": "2", "f": "0.12", "d": "0.23", "s": "4", "b": "5", "ts": "915757200000", "tsz": "915757200000"}
@@ -127,8 +130,8 @@ public class SourceParserTest extends ESTestCase {
 
     @Test
     public void test_string_encoded_boolean_will_be_parsed_by_data_type() {
-        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity());
-        sourceParser.register(new ColumnIdent("_doc", List.of("b")), DataTypes.BOOLEAN);
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity(), true);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("b")), DataTypes.BOOLEAN);
         Map<String, Object> result = sourceParser.parse(new BytesArray(
             """
                 {"b": "true"}
@@ -139,12 +142,12 @@ public class SourceParserTest extends ESTestCase {
 
     @Test
     public void test_uses_inner_type_info_to_parse_objects() throws Exception {
-        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity());
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity(), true);
         BitStringType bitStringType = new BitStringType(4);
-        ObjectType objectType = ObjectType.builder()
+        ObjectType objectType = ObjectType.of(ColumnPolicy.DYNAMIC)
             .setInnerType("bs", bitStringType)
             .build();
-        sourceParser.register(new ColumnIdent("_doc", List.of("o")), objectType);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("o")), objectType);
         Map<String, Object> result = sourceParser.parse(new BytesArray(
             """
             {
@@ -162,15 +165,15 @@ public class SourceParserTest extends ESTestCase {
 
     @Test
     public void test_null_object_sibling_subcolumn_has_same_name() {
-        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity());
-        ObjectType innerObjectType = ObjectType.builder()
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity(), true);
+        ObjectType innerObjectType = ObjectType.of(ColumnPolicy.DYNAMIC)
             .setInnerType("target", DataTypes.FLOAT)
             .build();
-        ObjectType outerObjectType = ObjectType.builder()
+        ObjectType outerObjectType = ObjectType.of(ColumnPolicy.DYNAMIC)
             .setInnerType("inner_object", innerObjectType)
             .setInnerType("target", DataTypes.STRING)
             .build();
-        sourceParser.register(new ColumnIdent("_doc", List.of("outer_object")), outerObjectType);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("outer_object")), outerObjectType);
         Map<String, Object> result = sourceParser.parse(new BytesArray(
             """
             {
@@ -194,12 +197,12 @@ public class SourceParserTest extends ESTestCase {
 
     @Test
     public void test_null_object_next_not_sibling_column_has_same_name() {
-        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity());
-        ObjectType objectType = ObjectType.builder()
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity(), true);
+        ObjectType objectType = ObjectType.of(ColumnPolicy.DYNAMIC)
             .setInnerType("target", DataTypes.FLOAT)
             .build();
-        sourceParser.register(new ColumnIdent("_doc", List.of("obj")), objectType);
-        sourceParser.register(new ColumnIdent("_doc", List.of("target")), DataTypes.STRING);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("obj")), objectType);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("target")), DataTypes.STRING);
         Map<String, Object> result = sourceParser.parse(new BytesArray(
             """
             {
@@ -220,7 +223,7 @@ public class SourceParserTest extends ESTestCase {
     // tracks a bug: https://github.com/crate/crate/issues/13504
     @Test
     public void test_nested_array_access() {
-        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity());
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity(), true);
         // ex:
         //   CREATE TABLE test (
         //   "a" array(object as (
@@ -228,8 +231,8 @@ public class SourceParserTest extends ESTestCase {
         //   "s" string
         //   )))));
         //   SELECT a['b'] from test; -- a['b'] is array(array(object))
-        ArrayType<?> type = new ArrayType<>(new ArrayType<>(ObjectType.builder().setInnerType("s", DataTypes.STRING).build()));
-        sourceParser.register(new ColumnIdent("_doc", List.of("a", "b")), type);
+        ArrayType<?> type = new ArrayType<>(new ArrayType<>(ObjectType.of(ColumnPolicy.DYNAMIC).setInnerType("s", DataTypes.STRING).build()));
+        sourceParser.register(ColumnIdent.of("_doc", List.of("a", "b")), type);
         var result = sourceParser.parse(new BytesArray(
             """
             {
@@ -258,12 +261,26 @@ public class SourceParserTest extends ESTestCase {
         );
     }
 
+    @Test
+    public void test_nested_array_of_geotype() {
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity(), true);
+        ArrayType<?> type = new ArrayType<>(new ArrayType<>(GeoPointType.INSTANCE));
+        sourceParser.register(ColumnIdent.of("_doc", List.of("a")), type);
+        var result = sourceParser.parse(new BytesArray("""
+            { "a" : [ [ [1, 2], [1, 2], [3, 4] ], [ [5, 6], [7, 8] ] ] }
+            """));
+        assertThat(result.get("a")).isInstanceOf(List.class);
+        List<?> first = (List<?>) ((List<?>)result.get("a")).getFirst();
+        assertThat(first.getFirst()).isInstanceOf(Point.class);
+
+    }
+
     // https://github.com/crate/crate/issues/13990
     @Test
     public void test_convert_empty_or_null_arrays_added_dynamically_to_nulls() {
-        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity());
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity(), true);
         var type = ObjectType.UNTYPED;
-        sourceParser.register(new ColumnIdent("_doc", List.of("x")), type);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("x")), type);
         var result = sourceParser.parse(
             new BytesArray(
                 """
@@ -280,8 +297,8 @@ public class SourceParserTest extends ESTestCase {
     // https://github.com/crate/crate/issues/14451
     @Test
     public void test_nested_arrays_from_ignored_objects() {
-        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity());
-        sourceParser.register(new ColumnIdent("_doc", List.of("obj", "x")), UndefinedType.INSTANCE);
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity(), true);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("obj", "x")), UndefinedType.INSTANCE);
         var result = sourceParser.parse(
             new BytesArray(
                 """
@@ -292,25 +309,26 @@ public class SourceParserTest extends ESTestCase {
                     }
                     """
             ));
-        assertThat(result).isEqualTo(Map.of("obj", Map.of("x", List.of(List.of("1", "2"), List.of("3", "4")))));
+        assertThat(result).isEqualTo(Map.of("obj", Map.of("x", List.of(List.of(1, 2), List.of(3, 4)))));
     }
 
     @Test
     public void test_dropped_leaf_sub_column() {
         SourceParser sourceParser = new SourceParser(
             Set.of(
-                createReference(new ColumnIdent("o", List.of("oo", "b")), DataTypes.INTEGER),
-                createReference(new ColumnIdent("o", List.of("oo", "s")), DataTypes.INTEGER)
+                createReference(ColumnIdent.of("o", List.of("oo", "b")), DataTypes.INTEGER),
+                createReference(ColumnIdent.of("o", List.of("oo", "s")), DataTypes.INTEGER)
             ),
-            UnaryOperator.identity()
+            UnaryOperator.identity(),
+            true
         );
-        var ooType = new ObjectType.Builder()
+        var ooType = ObjectType.of(ColumnPolicy.DYNAMIC)
             .setInnerType("a", DataTypes.INTEGER)
             .setInnerType("b", DataTypes.INTEGER)
             .setInnerType("s", DataTypes.INTEGER)
             .setInnerType("t", DataTypes.INTEGER)
             .build();
-        var oType = new ObjectType.Builder()
+        var oType = ObjectType.of(ColumnPolicy.DYNAMIC)
             .setInnerType("a", DataTypes.INTEGER)
             .setInnerType("b", DataTypes.INTEGER)
             .setInnerType("oo", ooType)
@@ -318,7 +336,7 @@ public class SourceParserTest extends ESTestCase {
             .setInnerType("t", DataTypes.INTEGER)
             .build();
 
-        sourceParser.register(new ColumnIdent("_doc", List.of("o")), oType);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("o")), oType);
         Map<String, Object> result = sourceParser.parse(new BytesArray(
             """
                 {"o": {"a":1, "b":2, "oo":{"a": 11, "b":22, "c":33, "s":33, "t":44}, "s":3, "t":4}}
@@ -336,22 +354,23 @@ public class SourceParserTest extends ESTestCase {
 
     @Test
     public void test_drop_sub_column_with_children_collect_parent_column() {
-        var ooType = new ObjectType.Builder()
+        var ooType = ObjectType.of(ColumnPolicy.DYNAMIC)
             .setInnerType("a", DataTypes.INTEGER)
             .setInnerType("b", DataTypes.INTEGER)
             .build();
-        var oType = new ObjectType.Builder()
+        var oType = ObjectType.of(ColumnPolicy.DYNAMIC)
             .setInnerType("oo", ooType)
             .setInnerType("a", DataTypes.INTEGER)
             .setInnerType("b", DataTypes.INTEGER)
             .build();
 
         SourceParser sourceParser = new SourceParser(
-                Set.of(createReference(new ColumnIdent("o", List.of("oo")), ooType)),
-                UnaryOperator.identity()
+            Set.of(createReference(ColumnIdent.of("o", List.of("oo")), ooType)),
+            UnaryOperator.identity(),
+            true
         );
         // Register parent column in order to collect ony this one, ignoring any other column
-        sourceParser.register(new ColumnIdent("_doc", List.of("o")), oType);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("o")), oType);
         Map<String, Object> result = sourceParser.parse(new BytesArray(
             """
                 {"o": {"a" : 1, "b": 2, "oo": {"a": 11, "b": 22, "c": 3}}, "x": 4}
@@ -366,8 +385,9 @@ public class SourceParserTest extends ESTestCase {
     @Test
     public void test_drop_sub_column_with_children_collect_all() {
         SourceParser sourceParser = new SourceParser(
-                Set.of(createReference(new ColumnIdent("o", List.of("oo")), DataTypes.UNTYPED_OBJECT)),
-                UnaryOperator.identity()
+            Set.of(createReference(ColumnIdent.of("o", List.of("oo")), DataTypes.UNTYPED_OBJECT)),
+            UnaryOperator.identity(),
+            true
         );
 
         // We don't register any column to the SourceParser in order to parse the complete document
@@ -386,18 +406,19 @@ public class SourceParserTest extends ESTestCase {
     public void test_alter_table_drop_leaf_subcolumn_with_parent_object_array() {
         SourceParser sourceParser = new SourceParser(
             Set.of(
-                createReference(new ColumnIdent("o", List.of("oo", "b")), DataTypes.INTEGER),
-                createReference(new ColumnIdent("o", List.of("oo", "t")), DataTypes.INTEGER)
+                createReference(ColumnIdent.of("o", List.of("oo", "b")), DataTypes.INTEGER),
+                createReference(ColumnIdent.of("o", List.of("oo", "t")), DataTypes.INTEGER)
             ),
-            UnaryOperator.identity()
+            UnaryOperator.identity(),
+            true
         );
-        var ooType = new ObjectType.Builder()
+        var ooType = ObjectType.of(ColumnPolicy.DYNAMIC)
             .setInnerType("a", DataTypes.INTEGER)
             .setInnerType("b", DataTypes.INTEGER)
             .setInnerType("s", DataTypes.INTEGER)
             .setInnerType("t", DataTypes.INTEGER)
             .build();
-        var oType = new ObjectType.Builder()
+        var oType = ObjectType.of(ColumnPolicy.DYNAMIC)
             .setInnerType("a", DataTypes.INTEGER)
             .setInnerType("b", DataTypes.INTEGER)
             .setInnerType("oo", new ArrayType<>(ooType))
@@ -405,7 +426,7 @@ public class SourceParserTest extends ESTestCase {
             .setInnerType("t", DataTypes.INTEGER)
             .build();
 
-        sourceParser.register(new ColumnIdent("_doc", List.of("o")), oType);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("o")), oType);
         Map<String, Object> result = sourceParser.parse(new BytesArray(
             """
             {
@@ -432,7 +453,7 @@ public class SourceParserTest extends ESTestCase {
         assertThat(Maps.getByPath(result, "o.s")).isEqualTo(3);
         assertThat(Maps.getByPath(result, "o.t")).isEqualTo(4);
         //noinspection unchecked
-        Map<String, Object> innerObj = (Map<String, Object>) ((List<?>) Maps.getByPath(result, "o.oo")).get(0);
+        Map<String, Object> innerObj = (Map<String, Object>) ((List<?>) Maps.getByPath(result, "o.oo")).getFirst();
         assertThat(innerObj).containsExactly(
             Map.entry("a", 11),
             Map.entry("s", 33));
@@ -440,22 +461,23 @@ public class SourceParserTest extends ESTestCase {
 
     @Test
     public void test_nested_dropped_columns_are_not_collected() {
-        var ooType = new ObjectType.Builder()
+        var ooType = ObjectType.of(ColumnPolicy.DYNAMIC)
                 .setInnerType("a", DataTypes.INTEGER)
                 .setInnerType("b", DataTypes.INTEGER)
                 .build();
-        var oType = new ObjectType.Builder()
+        var oType = ObjectType.of(ColumnPolicy.DYNAMIC)
                 .setInnerType("oo", ooType)
                 .setInnerType("a", DataTypes.INTEGER)
                 .setInnerType("b", DataTypes.INTEGER)
                 .build();
 
         SourceParser sourceParser = new SourceParser(
-                Set.of(createReference(new ColumnIdent("o", List.of("oo")), ooType)),
-                UnaryOperator.identity()
+            Set.of(createReference(ColumnIdent.of("o", List.of("oo")), ooType)),
+            UnaryOperator.identity(),
+            true
         );
 
-        sourceParser.register(new ColumnIdent("_doc", List.of("o")), oType);
+        sourceParser.register(ColumnIdent.of("_doc", List.of("o")), oType);
         Map<String, Object> result = sourceParser.parse(new BytesArray(
                 """
                     {"o": {"a" : 1, "b": 2, "oo": {"a": 11, "b": 22, "c": 3}}}
@@ -470,16 +492,13 @@ public class SourceParserTest extends ESTestCase {
     @Test
     @SuppressWarnings("unchecked")
     public void test_parse_long_from_object_array() throws Exception {
-        SourceParser sourceParser = new SourceParser(
-            Set.of(),
-            UnaryOperator.identity()
-        );
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity(), true);
 
-        var objType = new ObjectType.Builder()
+        var objType = ObjectType.of(ColumnPolicy.DYNAMIC)
             .setInnerType("x", DataTypes.LONG)
             .build();
         var objArray = new ArrayType<>(objType);
-        sourceParser.register(new ColumnIdent("_doc", "os"), objArray);
+        sourceParser.register(ColumnIdent.of("_doc", "os"), objArray);
         Map<String, Object> result = sourceParser.parse(new BytesArray(
             """
             {
@@ -494,5 +513,18 @@ public class SourceParserTest extends ESTestCase {
             Map.of("x", 10L),
             Map.of("x", 20L)
         );
+    }
+
+    @Test
+    public void test_parser_uses_null_values_instead_throwing_exceptions_on_value_parsing_errors() {
+        SourceParser sourceParser = new SourceParser(Set.of(), UnaryOperator.identity(), false);
+        var column = ColumnIdent.of("_doc", List.of("x"));
+        sourceParser.register(column, DataTypes.INTEGER);
+        Map<String, Object> result = sourceParser.parse(new BytesArray(
+            """
+               {"x": "foo"}
+            """));
+
+        assertThat(result.get("x")).isNull();
     }
 }
