@@ -28,7 +28,6 @@ import static io.crate.analyze.TableDefinitions.USER_TABLE_IDENT;
 import static io.crate.testing.Asserts.assertList;
 import static io.crate.testing.Asserts.assertThat;
 import static io.crate.testing.Asserts.isInputColumn;
-import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.Mockito.mock;
 
@@ -85,7 +84,7 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
     }
 
     private LogicalPlan buildLogicalPlan(QueriedSelectRelation mss) {
-        var plannerCtx = e.getPlannerContext(clusterService.state());
+        var plannerCtx = e.getPlannerContext();
         return buildLogicalPlan(mss, plannerCtx);
     }
 
@@ -100,7 +99,7 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
     }
 
     private Join buildJoin(LogicalPlan operator) {
-        var plannerCtx = e.getPlannerContext(clusterService.state());
+        var plannerCtx = e.getPlannerContext();
         return buildJoin(operator, plannerCtx);
     }
 
@@ -113,12 +112,12 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
     }
 
     private Join plan(QueriedSelectRelation mss) {
-        var plannerCtx = e.getPlannerContext(clusterService.state());
+        var plannerCtx = e.getPlannerContext();
         return buildJoin(buildLogicalPlan(mss, plannerCtx), plannerCtx);
     }
 
     private static String tableName(ExecutionPlan plan) {
-        return ((Reference) ((Collect) plan).collectPhase().toCollect().get(0)).ident().tableIdent().name();
+        return ((Reference) ((Collect) plan).collectPhase().toCollect().getFirst()).ident().tableIdent().name();
     }
 
     @Test
@@ -130,7 +129,7 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
         rowCountByTable.put(TEST_DOC_LOCATIONS_TABLE_IDENT, new Stats(5_000, 0, Map.of()));
         e.updateTableStats(rowCountByTable);
 
-        var plannerCtx = e.getPlannerContext(clusterService.state());
+        var plannerCtx = e.getPlannerContext();
         plannerCtx.transactionContext().sessionSettings().setHashJoinEnabled(false);
         Join nl = plan(mss, plannerCtx);
         assertThat(tableName(nl.left())).isEqualTo("locations");
@@ -153,11 +152,12 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
         rowCountByTable.put(TEST_DOC_LOCATIONS_TABLE_IDENT, new Stats(0, 0, Map.of()));
         e.updateTableStats(rowCountByTable);
 
+        PlannerContext context = e.getPlannerContext();
+        context.transactionContext().sessionSettings().setHashJoinEnabled(false);
+
         LogicalPlan operator = buildLogicalPlan(mss);
         assertThat(operator).isExactlyInstanceOf(NestedLoopJoin.class);
 
-        PlannerContext context = e.getPlannerContext(clusterService.state());
-        context.transactionContext().sessionSettings().setHashJoinEnabled(false);
         Join nl = plan(mss, context);
         assertThat(tableName(nl.left())).isEqualTo("users");
         assertThat(tableName(nl.right())).isEqualTo("locations");
@@ -177,7 +177,7 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
         rowCountByTable.put(TEST_DOC_LOCATIONS_TABLE_IDENT, new Stats(-1, 0, Map.of()));
         e.updateTableStats(rowCountByTable);
 
-        PlannerContext context = e.getPlannerContext(clusterService.state());
+        PlannerContext context = e.getPlannerContext();
         context.transactionContext().sessionSettings().setHashJoinEnabled(false);
 
         LogicalPlan operator = buildLogicalPlan(mss, context);
@@ -200,12 +200,13 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
         e.updateTableStats(rowCountByTable);
 
         LogicalPlan plan = buildLogicalPlan(mss);
-        assertThat(plan).isEqualTo("Eval[name, id]\n" +
-                                   "  └ HashJoin[(id = id)]\n" +
-                                   "    ├ Collect[doc.users | [name, id] | true]\n" +
-                                   "    └ Collect[doc.locations | [id] | true]");
+        assertThat(plan).isEqualTo("""
+            Eval[name, id]
+              └ HashJoin[INNER | (id = id)]
+                ├ Collect[doc.users | [name, id] | true]
+                └ Collect[doc.locations | [id] | true]""");
 
-        var hashjoin = plan.sources().get(0);
+        var hashjoin = plan.sources().getFirst();
         assertThat(hashjoin).isExactlyInstanceOf(HashJoin.class);
 
         Join join = buildJoin(hashjoin);
@@ -222,6 +223,9 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
             .addTable("create table j.right_table (id int)");
         RelationName leftName = new RelationName("j", "left_table");
         RelationName rightName = new RelationName("j", "right_table");
+
+        PlannerContext context = e.getPlannerContext();
+        context.transactionContext().sessionSettings().setHashJoinEnabled(false);
 
         QueriedSelectRelation mss = e.analyze("select * from j.left_table as l left join j.right_table as r on l.id = r.id");
 
@@ -252,7 +256,7 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
         rowCountByTable.put(TEST_DOC_LOCATIONS_TABLE_IDENT, new Stats(5_000, 0, Map.of()));
         e.updateTableStats(rowCountByTable);
 
-        PlannerContext context = e.getPlannerContext(clusterService.state());
+        PlannerContext context = e.getPlannerContext();
         context.transactionContext().sessionSettings().setHashJoinEnabled(false);
 
         Join nl = plan(mss, context);
@@ -270,15 +274,16 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
         QueriedSelectRelation mss = e.analyze("select users.id from users, locations " +
                   "where users.id = locations.id order by users.id");
 
-        PlannerContext context = e.getPlannerContext(clusterService.state());
+        PlannerContext context = e.getPlannerContext();
         context.transactionContext().sessionSettings().setHashJoinEnabled(false);
 
         LogicalPlan plan = buildLogicalPlan(mss, context);
-        assertThat(plan).isEqualTo("Eval[id]\n" +
-                                   "  └ NestedLoopJoin[INNER | (id = id)]\n" +
-                                   "    ├ OrderBy[id ASC]\n" +
-                                   "    │  └ Collect[doc.users | [id] | true]\n" +
-                                   "    └ Collect[doc.locations | [id] | true]");
+        assertThat(plan).isEqualTo("""
+            Eval[id]
+              └ NestedLoopJoin[INNER | (id = id)]
+                ├ OrderBy[id ASC]
+                │  └ Collect[doc.users | [id] | true]
+                └ Collect[doc.locations | [id] | true]""");
 
         var join = buildJoin(plan, context);
         assertThat(join.resultDescription().orderBy()).isNotNull();
@@ -297,14 +302,15 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
 
         LogicalPlan plan = buildLogicalPlan(mss);
         assertThat(plan).isEqualTo(
-            "Eval[name, id]\n" +
-            "  └ HashJoin[(id = id)]\n" +
-            "    ├ Collect[doc.users | [name, id] | true]\n" +
-            "    └ Collect[doc.locations | [id] | true]"
+            """
+                Eval[name, id]
+                  └ HashJoin[INNER | (id = id)]
+                    ├ Collect[doc.users | [name, id] | true]
+                    └ Collect[doc.locations | [id] | true]"""
         );
-        var hashJoin = plan.sources().get(0);
+        var hashJoin = plan.sources().getFirst();
         assertThat(hashJoin).isExactlyInstanceOf(HashJoin.class);
-        assertThat(((HashJoin) hashJoin).rhs().getRelationNames())
+        assertThat(((HashJoin) hashJoin).rhs().relationNames())
             .as("Smaller table must be on the right-hand-side")
             .containsExactly(TEST_DOC_LOCATIONS_TABLE_IDENT);
 
@@ -325,15 +331,15 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
         e.updateTableStats(rowCountByTable);
 
         LogicalPlan plan = buildLogicalPlan(mss);
-        assertThat(plan).isEqualTo("Eval[name, id]\n" +
-                                   "  └ Eval[name, id, id]\n" +
-                                   "    └ HashJoin[(id = id)]\n" +
-                                   "      ├ Collect[doc.locations | [id] | true]\n" +
-                                   "      └ Collect[doc.users | [name, id] | true]");
+        assertThat(plan).isEqualTo("""
+            Eval[name, id]
+              └ HashJoin[INNER | (id = id)]
+                ├ Collect[doc.locations | [id] | true]
+                └ Collect[doc.users | [name, id] | true]""");
 
-        LogicalPlan hashjoin = plan.sources().get(0).sources().get(0);
+        LogicalPlan hashjoin = plan.sources().getFirst();
         assertThat(hashjoin).isExactlyInstanceOf(HashJoin.class);
-        assertThat(((HashJoin) hashjoin).lhs().getRelationNames())
+        assertThat(((HashJoin) hashjoin).lhs().relationNames())
             .as("Smaller table must be on the left-hand-side")
             .containsExactly(TEST_DOC_LOCATIONS_TABLE_IDENT);
 
@@ -362,7 +368,7 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
     public void testMixedHashJoinNestedLoop() {
         QueriedSelectRelation mss = e.analyze("select * " +
                                               "from t1 inner join t2 on t1.a = t2.b " +
-                                              "left join t3 on t3.c = t2.b");
+                                              "left join t3 on t3.c > t2.b");
 
         LogicalPlan operator = buildLogicalPlan(mss);
         assertThat(operator).isExactlyInstanceOf(NestedLoopJoin.class);
@@ -391,7 +397,7 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
         Join join = buildJoin(operator);
         assertThat(join.joinPhase()).isExactlyInstanceOf(NestedLoopPhase.class);
         NestedLoopPhase joinPhase = (NestedLoopPhase) join.joinPhase();
-        assertThat(joinPhase.blockNestedLoop).isEqualTo(true);
+        assertThat(joinPhase.blockNestedLoop).isTrue();
     }
 
     @Test
@@ -416,7 +422,7 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
         Join join = buildJoin(operator);
         assertThat(join.joinPhase()).isExactlyInstanceOf(NestedLoopPhase.class);
         NestedLoopPhase joinPhase = (NestedLoopPhase) join.joinPhase();
-        assertThat(joinPhase.blockNestedLoop).isEqualTo(true);
+        assertThat(joinPhase.blockNestedLoop).isTrue();
 
         assertThat(join.left()).isExactlyInstanceOf(Collect.class);
         // no table switch should have been made
@@ -444,7 +450,7 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
         Join join = buildJoin(operator);
         assertThat(join.joinPhase()).isExactlyInstanceOf(NestedLoopPhase.class);
         NestedLoopPhase joinPhase = (NestedLoopPhase) join.joinPhase();
-        assertThat(joinPhase.blockNestedLoop).isEqualTo(true);
+        assertThat(joinPhase.blockNestedLoop).isTrue();
 
         assertThat(join.left()).isExactlyInstanceOf(Collect.class);
         // right side will be flipped to the left
@@ -464,7 +470,7 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
             T3.T4, new Stats(42, 64, Map.of())
         ));
 
-        var plannerCtx = e.getPlannerContext(clusterService.state());
+        var plannerCtx = e.getPlannerContext();
 
         QueriedSelectRelation mss = e.analyze("select * from t1, t4 order by t1.x");
         LogicalPlanner logicalPlanner = new LogicalPlanner(
@@ -476,7 +482,7 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
         ExecutionPlan build = operator.build(
             mock(DependencyCarrier.class), plannerCtx, Set.of(), projectionBuilder, -1, 0, null, null, Row.EMPTY, SubQueryResults.EMPTY);
 
-        assertThat((((NestedLoopPhase) ((Join) build).joinPhase())).blockNestedLoop).isEqualTo(false);
+        assertThat((((NestedLoopPhase) ((Join) build).joinPhase())).blockNestedLoop).isFalse();
     }
 
     @Test
@@ -491,12 +497,12 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
             () -> clusterService.state().nodes().getMinNodeVersion()
         );
 
-        var plannerCtx = e.getPlannerContext(clusterService.state());
+        var plannerCtx = e.getPlannerContext();
         plannerCtx.transactionContext().sessionSettings().setHashJoinEnabled(false);
 
         LogicalPlan join = logicalPlanner.plan(mss, plannerCtx);
         WindowAgg windowAggOperator = (WindowAgg) ((Eval) ((RootRelationBoundary) join).source).source;
-        assertThat(join.outputs()).contains(windowAggOperator.windowFunctions().get(0));
+        assertThat(join.outputs()).contains(windowAggOperator.windowFunctions().getFirst());
     }
 
     @Test
@@ -517,7 +523,7 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
         assertThat(logicalPlan).isEqualTo(expectedPlan);
 
         Join join = e.plan(statement);
-        assertThat(join.joinPhase().projections().get(0).outputs()).satisfiesExactly(
+        assertThat(join.joinPhase().projections().getFirst().outputs()).satisfiesExactly(
             isInputColumn(0),
             isInputColumn(1));
     }
@@ -565,7 +571,7 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
         var expectedPlan =
             """
             Eval[name]
-              └ HashJoin[(a = address['postcode'])]
+              └ HashJoin[INNER | (a = address['postcode'])]
                 ├ Collect[doc.users | [name, address['postcode']] | true]
                 └ Collect[doc.t1 | [a] | true]
             """;
@@ -578,7 +584,7 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
         expectedPlan =
             """
             Eval[name]
-              └ HashJoin[(a = address['postcode'])]
+              └ HashJoin[INNER | (a = address['postcode'])]
                 ├ Rename[name, address['postcode']] AS u
                 │  └ Collect[doc.users | [name, address['postcode']] | true]
                 └ Collect[doc.t1 | [a] | true]
@@ -615,7 +621,7 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
             """
             Rename[start] AS doc.v1
               └ Eval[ts_production AS start]
-                └ HashJoin[(ts_production = max_ts)]
+                └ HashJoin[INNER | (ts_production = max_ts)]
                   ├ Rename[max_ts] AS last_record
                   │  └ Eval[max(ts) AS max_ts]
                   │    └ HashAggregate[max(ts)]
@@ -631,7 +637,7 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
             """
             Rename[start] AS doc.v1
               └ Eval[ts_production AS start]
-                └ HashJoin[(ts_production = max_ts)]
+                └ HashJoin[INNER | (ts_production = max_ts)]
                   ├ Rename[max_ts] AS last_record
                   │  └ Eval[max(ts) AS max_ts]
                   │    └ HashAggregate[max(ts)]
@@ -653,8 +659,8 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
             """);
         assertThat(logicalPlan).hasOperators(
             "Eval[a, x, i, b, y, i, c, z]",
-            "  └ HashJoin[(z = y)]",
-            "    ├ HashJoin[(z = x)]",
+            "  └ HashJoin[INNER | (z = y)]",
+            "    ├ HashJoin[INNER | (z = x)]",
             "    │  ├ Collect[doc.t1 | [a, x, i] | true]",
             "    │  └ Collect[doc.t3 | [c, z] | true]",
             "    └ Collect[doc.t2 | [b, y, i] | true]"
@@ -691,7 +697,7 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
         assertThat(logicalPlan).isEqualTo(
             """
             Eval[time, sensor_id, battery_level]
-              └ NestedLoopJoin[LEFT | ((time = time) AND (sensor_id = sensor_id))]
+              └ HashJoin[LEFT | ((time = time) AND (sensor_id = sensor_id))]
                 ├ NestedLoopJoin[CROSS]
                 │  ├ Rename[time] AS time_series
                 │  │  └ TableFunction[generate_series | [generate_series] | true]
@@ -717,7 +723,7 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
         assertThat(logicalPlan).isEqualTo(
             """
             Eval[a, x, i, b]
-              └ HashJoin[(x = y)]
+              └ HashJoin[INNER | (x = y)]
                 ├ Collect[doc.t1 | [a, x, i] | true]
                 └ Collect[doc.t2 | [b, y] | (b = 'abc')]
             """);
@@ -736,7 +742,7 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
         assertThat(logicalPlan).isEqualTo(
             """
             MultiPhase
-              └ HashJoin[(i = i)]
+              └ HashJoin[INNER | (i = i)]
                 ├ Collect[doc.t1 | [a, x, i] | true]
                 └ Collect[doc.t2 | [b, y, i] | (y = ANY((SELECT z FROM (doc.t3))))]
               └ OrderBy[z ASC]
@@ -774,10 +780,9 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
                   │  └ Collect[doc.c | [x] | true]
                   └ Collect[doc.d | [] | true]
                 └ SubPlan
-                  └ Eval[1]
-                    └ Limit[2::bigint;0::bigint]
-                      └ Filter[(((x = 1) AND (x = 1)) AND (x = 1))]
-                        └ TableFunction[empty_row | [] | true]
+                  └ Limit[2::bigint;0::bigint]
+                    └ Filter[(((x = 1) AND (x = 1)) AND (x = 1))]
+                      └ TableFunction[empty_row | [1] | true]
             """
         );
     }
@@ -1032,12 +1037,12 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
         );
         assertThat(logicalPlan).isEqualTo(
                 """
-              HashJoin[((x = z) AND (y = z))]
-                ├ HashJoin[(x = y)]
+              HashJoin[INNER | ((x = z) AND (y = z))]
+                ├ HashJoin[INNER | (x = y)]
                 │  ├ Collect[doc.j1 | [x] | true]
                 │  └ Collect[doc.j2 | [y] | true]
                 └ Collect[doc.j3 | [z] | true]
-                """
+              """
         );
         // Variant with explicit and implicit join conditions swapped.
         // Due to internal ordering this behaved differently before.
@@ -1050,12 +1055,12 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
         );
         assertThat(logicalPlan).isEqualTo(
                 """
-              HashJoin[((x = z) AND (y = z))]
-                ├ HashJoin[(x = y)]
+              HashJoin[INNER | ((x = z) AND (y = z))]
+                ├ HashJoin[INNER | (x = y)]
                 │  ├ Collect[doc.j1 | [x] | true]
                 │  └ Collect[doc.j2 | [y] | true]
                 └ Collect[doc.j3 | [z] | true]
-                """
+              """
         );
     }
 
@@ -1078,20 +1083,145 @@ public class JoinTest extends CrateDummyClusterServiceUnitTest {
         QueriedSelectRelation mss = e.analyze(
             "Select * from t1 INNER JOIN t2 on t1.a = t2.b INNER JOIN T3 on t2.b = t3.c");
 
-        var plannerCtx = executor.getPlannerContext(clusterService.state());
+        var plannerCtx = executor.getPlannerContext();
         plannerCtx.transactionContext().sessionSettings().setHashJoinEnabled(false);
         NestedLoopJoin result = (NestedLoopJoin) buildLogicalPlan(mss, plannerCtx);
 
         assertThat(result).isEqualTo(
-            "NestedLoopJoin[INNER | (b = c)]\n" +
-            "  ├ Eval[a, b]\n" +
-            "  │  └ NestedLoopJoin[INNER | (a = b)]\n" +
-            "  │    ├ Collect[doc.t2 | [b] | true]\n" +
-            "  │    └ Collect[doc.t1 | [a] | true]\n" +
-            "  └ Collect[doc.t3 | [c] | true]"
+            """
+                NestedLoopJoin[INNER | (b = c)]
+                  ├ Eval[a, b]
+                  │  └ NestedLoopJoin[INNER | (a = b)]
+                  │    ├ Collect[doc.t2 | [b] | true]
+                  │    └ Collect[doc.t1 | [a] | true]
+                  └ Collect[doc.t3 | [c] | true]"""
         );
-        assertThat(result.getRelationNames().get(0).toString()).isEqualTo("doc.t2");
-        assertThat(result.getRelationNames().get(1).toString()).isEqualTo("doc.t1");
-        assertThat(result.getRelationNames().get(2).toString()).isEqualTo("doc.t3");
+        assertThat(result.relationNames().get(0).toString()).isEqualTo("doc.t2");
+        assertThat(result.relationNames().get(1).toString()).isEqualTo("doc.t1");
+        assertThat(result.relationNames().get(2).toString()).isEqualTo("doc.t3");
+    }
+
+    @Test
+    public void test_push_constant_join_conditions_beneath_outer_joins() throws Exception {
+        var executor = SQLExecutor.builder(clusterService)
+            .build()
+            .addTable("CREATE TABLE doc.t1 (a INT)")
+            .addTable("CREATE TABLE doc.t2 (b INT)");
+
+        QueriedSelectRelation mss = e.analyze("SELECT * FROM t1 RIGHT JOIN t2 ON t1.a = t2.b AND t1.a > 1");
+
+        var plannerCtx = executor.getPlannerContext();
+        plannerCtx.transactionContext().sessionSettings().setHashJoinEnabled(false);
+        var result = buildLogicalPlan(mss, plannerCtx);
+
+        assertThat(result).hasOperators(
+            "NestedLoopJoin[RIGHT | (a = b)]",
+            "  ├ Collect[doc.t1 | [a] | (a > 1)]",
+            "  └ Collect[doc.t2 | [b] | true]"
+        );
+    }
+
+    @Test
+    public void test_right_outer_join_rewrite_to_left_outer_join() throws Exception {
+        var executor = SQLExecutor.builder(clusterService)
+            .build()
+            .addTable("CREATE TABLE doc.t1 (a INT)")
+            .addTable("CREATE TABLE doc.t2 (b INT)");
+
+        QueriedSelectRelation mss = e.analyze("SELECT * FROM t1 RIGHT JOIN t2 ON t1.a = t2.b");
+
+        var plannerCtx = executor.getPlannerContext();
+        var result = buildLogicalPlan(mss, plannerCtx);
+
+        assertThat(result).hasOperators(
+            "Eval[a, b]",
+            "  └ HashJoin[LEFT | (a = b)]",
+            "    ├ Collect[doc.t2 | [b] | true]",
+            "    └ Collect[doc.t1 | [a] | true]"
+        );
+    }
+
+    @Test
+    public void test_many_mized_implicit_and_explicit_joins() throws Exception {
+        var executor = SQLExecutor.builder(clusterService)
+            .build()
+            .addTable("CREATE TABLE doc.t1(a integer)")
+            .addTable("CREATE TABLE doc.t2(b integer)")
+            .addTable("CREATE TABLE doc.t3(c integer)")
+            .addTable("CREATE TABLE doc.t4(d integer)")
+            .addTable("CREATE TABLE doc.t5(e integer)")
+            .addTable("CREATE TABLE doc.t6(f integer)");
+
+
+        QueriedSelectRelation mss = e.analyze("SELECT * FROM doc.t1 right join doc.t2 on true, doc.t3, doc.t4, t5, t6");
+        var plannerCtx = executor.getPlannerContext();
+        var result = buildLogicalPlan(mss, plannerCtx);
+
+        assertThat(result).hasOperators(
+            "NestedLoopJoin[CROSS]",
+            "  ├ NestedLoopJoin[CROSS]",
+            "  │  ├ NestedLoopJoin[CROSS]",
+            "  │  │  ├ NestedLoopJoin[CROSS]",
+            "  │  │  │  ├ NestedLoopJoin[RIGHT | true]",
+            "  │  │  │  │  ├ Collect[doc.t1 | [a] | true]",
+            "  │  │  │  │  └ Collect[doc.t2 | [b] | true]",
+            "  │  │  │  └ Collect[doc.t3 | [c] | true]",
+            "  │  │  └ Collect[doc.t4 | [d] | true]",
+            "  │  └ Collect[doc.t5 | [e] | true]",
+            "  └ Collect[doc.t6 | [f] | true]"
+        );
+
+
+        mss = e.analyze("SELECT * FROM doc.t1, doc.t2, doc.t3 right join doc.t4 on true, doc.t5, doc.t6");
+        result = buildLogicalPlan(mss, plannerCtx);
+
+        assertThat(result).hasOperators(
+            "Eval[a, b, c, d, e, f]",
+            "  └ NestedLoopJoin[CROSS]",
+            "    ├ NestedLoopJoin[CROSS]",
+            "    │  ├ NestedLoopJoin[CROSS]",
+            "    │  │  ├ NestedLoopJoin[CROSS]",
+            "    │  │  │  ├ NestedLoopJoin[RIGHT | true]",
+            "    │  │  │  │  ├ Collect[doc.t3 | [c] | true]",
+            "    │  │  │  │  └ Collect[doc.t4 | [d] | true]",
+            "    │  │  │  └ Collect[doc.t1 | [a] | true]",
+            "    │  │  └ Collect[doc.t2 | [b] | true]",
+            "    │  └ Collect[doc.t5 | [e] | true]",
+            "    └ Collect[doc.t6 | [f] | true]"
+        );
+
+        mss = e.analyze("SELECT * FROM doc.t1, doc.t2 right join doc.t3 on true, doc.t4 left join doc.t5 on true, doc.t6");
+        result = buildLogicalPlan(mss, plannerCtx);
+
+        assertThat(result).hasOperators(
+            "Eval[a, b, c, d, e, f]",
+            "  └ NestedLoopJoin[CROSS]",
+            "    ├ NestedLoopJoin[LEFT | true]",
+            "    │  ├ NestedLoopJoin[CROSS]",
+            "    │  │  ├ NestedLoopJoin[CROSS]",
+            "    │  │  │  ├ NestedLoopJoin[RIGHT | true]",
+            "    │  │  │  │  ├ Collect[doc.t2 | [b] | true]",
+            "    │  │  │  │  └ Collect[doc.t3 | [c] | true]",
+            "    │  │  │  └ Collect[doc.t1 | [a] | true]",
+            "    │  │  └ Collect[doc.t4 | [d] | true]",
+            "    │  └ Collect[doc.t5 | [e] | true]",
+            "    └ Collect[doc.t6 | [f] | true]"
+        );
+
+        mss = e.analyze("SELECT * FROM doc.t1, doc.t2 right join doc.t3 on true left join doc.t5 on true, doc.t6");
+        result = buildLogicalPlan(mss, plannerCtx);
+
+        assertThat(result).hasOperators(
+            "Eval[a, b, c, e, f]",
+            "  └ NestedLoopJoin[CROSS]",
+            "    ├ NestedLoopJoin[LEFT | true]",
+            "    │  ├ NestedLoopJoin[CROSS]",
+            "    │  │  ├ NestedLoopJoin[RIGHT | true]",
+            "    │  │  │  ├ Collect[doc.t2 | [b] | true]",
+            "    │  │  │  └ Collect[doc.t3 | [c] | true]",
+            "    │  │  └ Collect[doc.t1 | [a] | true]",
+            "    │  └ Collect[doc.t5 | [e] | true]",
+            "    └ Collect[doc.t6 | [f] | true]"
+        );
     }
 }
