@@ -22,21 +22,13 @@ package org.elasticsearch.cluster.routing.allocation;
 import static java.util.Collections.emptyList;
 import static java.util.Collections.emptyMap;
 import static java.util.Collections.emptySet;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.hamcrest.Matchers.startsWith;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotSame;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertSame;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertTrue;
 
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.elasticsearch.Version;
 import org.elasticsearch.cluster.node.DiscoveryNode;
@@ -44,6 +36,7 @@ import org.elasticsearch.cluster.routing.UnassignedInfo.AllocationStatus;
 import org.elasticsearch.cluster.routing.allocation.decider.Decision;
 import org.elasticsearch.common.io.stream.BytesStreamOutput;
 import org.elasticsearch.test.ESTestCase;
+import org.junit.Test;
 
 /**
  * Unit tests for the {@link AllocateUnassignedDecision} class.
@@ -53,9 +46,10 @@ public class AllocateUnassignedDecisionTests extends ESTestCase {
     private DiscoveryNode node1 = new DiscoveryNode("node1", buildNewFakeTransportAddress(), emptyMap(), emptySet(), Version.CURRENT);
     private DiscoveryNode node2 = new DiscoveryNode("node2", buildNewFakeTransportAddress(), emptyMap(), emptySet(), Version.CURRENT);
 
+    @Test
     public void testDecisionNotTaken() {
         AllocateUnassignedDecision allocateUnassignedDecision = AllocateUnassignedDecision.NOT_TAKEN;
-        assertFalse(allocateUnassignedDecision.isDecisionTaken());
+        assertThat(allocateUnassignedDecision.isDecisionTaken()).isFalse();
         assertThatThrownBy(() -> allocateUnassignedDecision.getAllocationDecision())
             .isExactlyInstanceOf(IllegalStateException.class);
         assertThatThrownBy(() -> allocateUnassignedDecision.getAllocationStatus())
@@ -70,68 +64,70 @@ public class AllocateUnassignedDecisionTests extends ESTestCase {
             .isExactlyInstanceOf(IllegalStateException.class);
     }
 
+    @Test
     public void testNoDecision() {
         final AllocationStatus allocationStatus = randomFrom(
             AllocationStatus.DELAYED_ALLOCATION, AllocationStatus.NO_VALID_SHARD_COPY, AllocationStatus.FETCHING_SHARD_DATA
         );
         AllocateUnassignedDecision noDecision = AllocateUnassignedDecision.no(allocationStatus, null);
-        assertTrue(noDecision.isDecisionTaken());
-        assertEquals(AllocationDecision.fromAllocationStatus(allocationStatus), noDecision.getAllocationDecision());
-        assertEquals(allocationStatus, noDecision.getAllocationStatus());
+        assertThat(noDecision.isDecisionTaken()).isTrue();
+        assertThat(noDecision.getAllocationDecision()).isEqualTo(AllocationDecision.fromAllocationStatus(allocationStatus));
+        assertThat(noDecision.getAllocationStatus()).isEqualTo(allocationStatus);
         if (allocationStatus == AllocationStatus.FETCHING_SHARD_DATA) {
-            assertEquals("cannot allocate because information about existing shard data is still being retrieved from " +
-                         "some of the nodes", noDecision.getExplanation());
+            assertThat(noDecision.getExplanation()).isEqualTo("cannot allocate because information about existing shard data is still being retrieved from " +
+                         "some of the nodes");
         } else if (allocationStatus == AllocationStatus.DELAYED_ALLOCATION) {
-            assertThat(noDecision.getExplanation(), startsWith("cannot allocate because the cluster is still waiting"));
+            assertThat(noDecision.getExplanation()).startsWith("cannot allocate because the cluster is still waiting");
         } else {
-            assertThat(noDecision.getExplanation(),
-                       startsWith("cannot allocate because a previous copy of the primary shard existed"));
+            assertThat(noDecision.getExplanation())
+                .startsWith("cannot allocate because a previous copy of the primary shard existed");
         }
-        assertNull(noDecision.getNodeDecisions());
-        assertNull(noDecision.getTargetNode());
-        assertNull(noDecision.getAllocationId());
+        assertThat(noDecision.getNodeDecisions()).isNull();
+        assertThat(noDecision.getTargetNode()).isNull();
+        assertThat(noDecision.getAllocationId()).isNull();
 
         List<NodeAllocationResult> nodeDecisions = new ArrayList<>();
         nodeDecisions.add(new NodeAllocationResult(node1, Decision.NO, 1));
         nodeDecisions.add(new NodeAllocationResult(node2, Decision.NO, 2));
         final boolean reuseStore = randomBoolean();
         noDecision = AllocateUnassignedDecision.no(AllocationStatus.DECIDERS_NO, nodeDecisions, reuseStore);
-        assertTrue(noDecision.isDecisionTaken());
-        assertEquals(AllocationDecision.NO, noDecision.getAllocationDecision());
-        assertEquals(AllocationStatus.DECIDERS_NO, noDecision.getAllocationStatus());
+        assertThat(noDecision.isDecisionTaken()).isTrue();
+        assertThat(noDecision.getAllocationDecision()).isEqualTo(AllocationDecision.NO);
+        assertThat(noDecision.getAllocationStatus()).isEqualTo(AllocationStatus.DECIDERS_NO);
         if (reuseStore) {
-            assertEquals("cannot allocate because allocation is not permitted to any of the nodes that hold an in-sync shard copy",
-                         noDecision.getExplanation());
+            assertThat(noDecision.getExplanation()).isEqualTo("cannot allocate because allocation is not permitted to any of the nodes that hold an in-sync shard copy");
         } else {
-            assertEquals("cannot allocate because allocation is not permitted to any of the nodes", noDecision.getExplanation());
+            assertThat(noDecision.getExplanation()).isEqualTo("cannot allocate because allocation is not permitted to any of the nodes");
         }
-        assertEquals(nodeDecisions.stream().sorted().collect(Collectors.toList()), noDecision.getNodeDecisions());
+        assertThat(noDecision.getNodeDecisions()).isEqualTo(nodeDecisions.stream().sorted().toList());
         // node1 should be sorted first b/c of better weight ranking
-        assertEquals("node1", noDecision.getNodeDecisions().iterator().next().getNode().getId());
-        assertNull(noDecision.getTargetNode());
-        assertNull(noDecision.getAllocationId());
+        assertThat(noDecision.getNodeDecisions().getFirst().getNode().getId()).isEqualTo("node1");
+        assertThat(noDecision.getTargetNode()).isNull();
+        assertThat(noDecision.getAllocationId()).isNull();
 
         // test bad values
         assertThatThrownBy(() -> AllocateUnassignedDecision.no(null, null))
             .isExactlyInstanceOf(NullPointerException.class);
     }
 
+    @Test
     public void testThrottleDecision() {
         List<NodeAllocationResult> nodeDecisions = new ArrayList<>();
         nodeDecisions.add(new NodeAllocationResult(node1, Decision.NO, 1));
         nodeDecisions.add(new NodeAllocationResult(node2, Decision.THROTTLE, 2));
         AllocateUnassignedDecision throttleDecision = AllocateUnassignedDecision.throttle(nodeDecisions);
-        assertTrue(throttleDecision.isDecisionTaken());
-        assertEquals(AllocationDecision.THROTTLED, throttleDecision.getAllocationDecision());
-        assertEquals(AllocationStatus.DECIDERS_THROTTLED, throttleDecision.getAllocationStatus());
-        assertThat(throttleDecision.getExplanation(), startsWith("allocation temporarily throttled"));
-        assertEquals(nodeDecisions.stream().sorted().collect(Collectors.toList()), throttleDecision.getNodeDecisions());
+        assertThat(throttleDecision.isDecisionTaken()).isTrue();
+        assertThat(throttleDecision.getAllocationDecision()).isEqualTo(AllocationDecision.THROTTLED);
+        assertThat(throttleDecision.getAllocationStatus()).isEqualTo(AllocationStatus.DECIDERS_THROTTLED);
+        assertThat(throttleDecision.getExplanation()).startsWith("allocation temporarily throttled");
+        assertThat(throttleDecision.getNodeDecisions()).isEqualTo(nodeDecisions.stream().sorted().toList());
         // node2 should be sorted first b/c a THROTTLE is higher than a NO decision
-        assertEquals("node2", throttleDecision.getNodeDecisions().iterator().next().getNode().getId());
-        assertNull(throttleDecision.getTargetNode());
-        assertNull(throttleDecision.getAllocationId());
+        assertThat(throttleDecision.getNodeDecisions().getFirst().getNode().getId()).isEqualTo("node2");
+        assertThat(throttleDecision.getTargetNode()).isNull();
+        assertThat(throttleDecision.getAllocationId()).isNull();
     }
 
+    @Test
     public void testYesDecision() {
         List<NodeAllocationResult> nodeDecisions = new ArrayList<>();
         nodeDecisions.add(new NodeAllocationResult(node1, Decision.NO, 1));
@@ -139,17 +135,18 @@ public class AllocateUnassignedDecisionTests extends ESTestCase {
         String allocId = randomBoolean() ? "allocId" : null;
         AllocateUnassignedDecision yesDecision = AllocateUnassignedDecision.yes(
             node2, allocId, nodeDecisions, randomBoolean());
-        assertTrue(yesDecision.isDecisionTaken());
-        assertEquals(AllocationDecision.YES, yesDecision.getAllocationDecision());
-        assertNull(yesDecision.getAllocationStatus());
-        assertEquals("can allocate the shard", yesDecision.getExplanation());
-        assertEquals(nodeDecisions.stream().sorted().collect(Collectors.toList()), yesDecision.getNodeDecisions());
-        assertEquals("node2", yesDecision.getTargetNode().getId());
-        assertEquals(allocId, yesDecision.getAllocationId());
+        assertThat(yesDecision.isDecisionTaken()).isTrue();
+        assertThat(yesDecision.getAllocationDecision()).isEqualTo(AllocationDecision.YES);
+        assertThat(yesDecision.getAllocationStatus()).isNull();
+        assertThat(yesDecision.getExplanation()).isEqualTo("can allocate the shard");
+        assertThat(yesDecision.getNodeDecisions()).isEqualTo(nodeDecisions.stream().sorted().toList());
+        assertThat(yesDecision.getTargetNode().getId()).isEqualTo("node2");
+        assertThat(yesDecision.getAllocationId()).isEqualTo(allocId);
         // node1 should be sorted first b/c YES decisions are the highest
-        assertEquals("node2", yesDecision.getNodeDecisions().iterator().next().getNode().getId());
+        assertThat(yesDecision.getNodeDecisions().getFirst().getNode().getId()).isEqualTo("node2");
     }
 
+    @Test
     public void testCachedDecisions() {
         List<AllocationStatus> cacheableStatuses = Arrays.asList(AllocationStatus.DECIDERS_NO, AllocationStatus.DECIDERS_THROTTLED,
                                                                  AllocationStatus.NO_VALID_SHARD_COPY, AllocationStatus.FETCHING_SHARD_DATA, AllocationStatus.DELAYED_ALLOCATION);
@@ -157,17 +154,17 @@ public class AllocateUnassignedDecisionTests extends ESTestCase {
             if (allocationStatus == AllocationStatus.DECIDERS_THROTTLED) {
                 AllocateUnassignedDecision cached = AllocateUnassignedDecision.throttle(null);
                 AllocateUnassignedDecision another = AllocateUnassignedDecision.throttle(null);
-                assertSame(cached, another);
+                assertThat(another).isSameAs(cached);
                 AllocateUnassignedDecision notCached = AllocateUnassignedDecision.throttle(new ArrayList<>());
                 another = AllocateUnassignedDecision.throttle(new ArrayList<>());
-                assertNotSame(notCached, another);
+                assertThat(another).isNotSameAs(notCached);
             } else {
                 AllocateUnassignedDecision cached = AllocateUnassignedDecision.no(allocationStatus, null);
                 AllocateUnassignedDecision another = AllocateUnassignedDecision.no(allocationStatus, null);
-                assertSame(cached, another);
+                assertThat(another).isSameAs(cached);
                 AllocateUnassignedDecision notCached = AllocateUnassignedDecision.no(allocationStatus, new ArrayList<>());
                 another = AllocateUnassignedDecision.no(allocationStatus, new ArrayList<>());
-                assertNotSame(notCached, another);
+                assertThat(another).isNotSameAs(notCached);
             }
         }
 
@@ -175,9 +172,10 @@ public class AllocateUnassignedDecisionTests extends ESTestCase {
         AllocateUnassignedDecision first = AllocateUnassignedDecision.yes(node1, "abc", emptyList(), randomBoolean());
         AllocateUnassignedDecision second = AllocateUnassignedDecision.yes(node1, "abc", emptyList(), randomBoolean());
         // same fields for the ShardAllocationDecision, but should be different instances
-        assertNotSame(first, second);
+        assertThat(second).isNotSameAs(first);
     }
 
+    @Test
     public void testSerialization() throws IOException {
         DiscoveryNode node1 = new DiscoveryNode("node1", buildNewFakeTransportAddress(), emptyMap(), emptySet(), Version.CURRENT);
         DiscoveryNode node2 = new DiscoveryNode("node2", buildNewFakeTransportAddress(), emptyMap(), emptySet(), Version.CURRENT);
@@ -199,14 +197,13 @@ public class AllocateUnassignedDecisionTests extends ESTestCase {
         BytesStreamOutput output = new BytesStreamOutput();
         decision.writeTo(output);
         AllocateUnassignedDecision readDecision = new AllocateUnassignedDecision(output.bytes().streamInput());
-        assertEquals(decision.getTargetNode(), readDecision.getTargetNode());
-        assertEquals(decision.getAllocationStatus(), readDecision.getAllocationStatus());
-        assertEquals(decision.getExplanation(), readDecision.getExplanation());
-        assertEquals(decision.getNodeDecisions().size(), readDecision.getNodeDecisions().size());
-        assertEquals(decision.getAllocationId(), readDecision.getAllocationId());
-        assertEquals(decision.getAllocationDecision(), readDecision.getAllocationDecision());
+        assertThat(readDecision.getTargetNode()).isEqualTo(decision.getTargetNode());
+        assertThat(readDecision.getAllocationStatus()).isEqualTo(decision.getAllocationStatus());
+        assertThat(readDecision.getExplanation()).isEqualTo(decision.getExplanation());
+        assertThat(readDecision.getNodeDecisions().size()).isEqualTo(decision.getNodeDecisions().size());
+        assertThat(readDecision.getAllocationId()).isEqualTo(decision.getAllocationId());
+        assertThat(readDecision.getAllocationDecision()).isEqualTo(decision.getAllocationDecision());
         // node2 should have the highest sort order
-        assertEquals("node2", readDecision.getNodeDecisions().iterator().next().getNode().getId());
+        assertThat(readDecision.getNodeDecisions().getFirst().getNode().getId()).isEqualTo("node2");
     }
-
 }
