@@ -23,18 +23,9 @@ import static java.util.Collections.emptyList;
 import static java.util.Collections.emptyMap;
 import static java.util.Collections.emptySet;
 import static java.util.Collections.singletonList;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.elasticsearch.discovery.PeerFinder.REQUEST_PEERS_ACTION_NAME;
 import static org.elasticsearch.node.Node.NODE_NAME_SETTING;
-import static org.hamcrest.Matchers.contains;
-import static org.hamcrest.Matchers.empty;
-import static org.hamcrest.Matchers.emptyArray;
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.instanceOf;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.nullValue;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.assertTrue;
 
 import java.io.IOException;
 import java.util.ArrayList;
@@ -78,6 +69,7 @@ import org.elasticsearch.transport.TransportResponseHandler;
 import org.elasticsearch.transport.TransportService;
 import org.junit.After;
 import org.junit.Before;
+import org.junit.Test;
 
 public class PeerFinderTests extends ESTestCase {
 
@@ -89,8 +81,8 @@ public class PeerFinderTests extends ESTestCase {
     private List<TransportAddress> providedAddresses;
     private long addressResolveDelay; // -1 means address resolution fails
 
-    private Set<DiscoveryNode> disconnectedNodes = new HashSet<>();
-    private Set<DiscoveryNode> connectedNodes = new HashSet<>();
+    private final Set<DiscoveryNode> disconnectedNodes = new HashSet<>();
+    private final Set<DiscoveryNode> connectedNodes = new HashSet<>();
     private DiscoveryNodes lastAcceptedNodes;
     private TransportService transportService;
     private Iterable<DiscoveryNode> foundPeersFromNotification;
@@ -112,7 +104,7 @@ public class PeerFinderTests extends ESTestCase {
             assert localNode.getAddress().equals(transportAddress) == false : "should not probe local node";
 
             final boolean isNotInFlight = inFlightConnectionAttempts.add(transportAddress);
-            assertTrue(isNotInFlight);
+            assertThat(isNotInFlight).isTrue();
 
             final long connectResultTime = deterministicTaskQueue.getCurrentTimeMillis()
                 + (slowAddresses.contains(transportAddress) ? CONNECTION_TIMEOUT_MILLIS : 0);
@@ -121,7 +113,7 @@ public class PeerFinderTests extends ESTestCase {
                 @Override
                 public void run() {
                     if (unreachableAddresses.contains(transportAddress)) {
-                        assertTrue(inFlightConnectionAttempts.remove(transportAddress));
+                        assertThat(inFlightConnectionAttempts.remove(transportAddress)).isTrue();
                         listener.onFailure(new IOException("cannot connect to " + transportAddress));
                         return;
                     }
@@ -132,7 +124,7 @@ public class PeerFinderTests extends ESTestCase {
                             if (discoveryNode.isMasterEligibleNode()) {
                                 disconnectedNodes.remove(discoveryNode);
                                 connectedNodes.add(discoveryNode);
-                                assertTrue(inFlightConnectionAttempts.remove(transportAddress));
+                                assertThat(inFlightConnectionAttempts.remove(transportAddress)).isTrue();
                                 listener.onResponse(discoveryNode);
                                 return;
                             } else {
@@ -164,8 +156,8 @@ public class PeerFinderTests extends ESTestCase {
         @Override
         protected void onActiveMasterFound(DiscoveryNode masterNode, long term) {
             assert holdsLock() == false : "PeerFinder lock held in error";
-            assertThat(discoveredMasterNode, nullValue());
-            assertFalse(discoveredMasterTerm.isPresent());
+            assertThat(discoveredMasterNode).isNull();
+            assertThat(discoveredMasterTerm.isPresent()).isFalse();
             discoveredMasterNode = masterNode;
             discoveredMasterTerm = OptionalLong.of(term);
         }
@@ -192,7 +184,7 @@ public class PeerFinderTests extends ESTestCase {
                 }
             });
         } else {
-            assertThat(addressResolveDelay, is(-1L));
+            assertThat(addressResolveDelay).isEqualTo(-1L);
         }
     }
 
@@ -243,6 +235,7 @@ public class PeerFinderTests extends ESTestCase {
         deterministicTaskQueue.runAllRunnableTasks();
     }
 
+    @Test
     public void testAddsReachableNodesFromUnicastHostsList() {
         final DiscoveryNode otherNode = newDiscoveryNode("node-from-hosts-list");
         providedAddresses.add(otherNode.getAddress());
@@ -254,6 +247,7 @@ public class PeerFinderTests extends ESTestCase {
         assertFoundPeers(otherNode);
     }
 
+    @Test
     public void testDoesNotReturnDuplicateNodesWithDistinctAddresses() {
         final DiscoveryNode otherNode = newDiscoveryNode("node-from-hosts-list");
         final TransportAddress alternativeAddress = buildNewFakeTransportAddress();
@@ -269,6 +263,7 @@ public class PeerFinderTests extends ESTestCase {
         assertFoundPeers(otherNode);
     }
 
+    @Test
     public void testAddsReachableNodesFromUnicastHostsListProvidedLater() {
         final DiscoveryNode otherNode = newDiscoveryNode("node-from-hosts-list");
         providedAddresses.add(otherNode.getAddress());
@@ -288,6 +283,7 @@ public class PeerFinderTests extends ESTestCase {
         assertFoundPeers(otherNode);
     }
 
+    @Test
     public void testDoesNotRequireAddressResolutionToSucceed() {
         final DiscoveryNode otherNode = newDiscoveryNode("node-from-hosts-list");
         providedAddresses.add(otherNode.getAddress());
@@ -307,6 +303,7 @@ public class PeerFinderTests extends ESTestCase {
         assertFoundPeers();
     }
 
+    @Test
     public void testDoesNotAddUnreachableNodesFromUnicastHostsList() {
         final DiscoveryNode otherNode = newDiscoveryNode("node-from-hosts-list");
         providedAddresses.add(otherNode.getAddress());
@@ -318,6 +315,7 @@ public class PeerFinderTests extends ESTestCase {
         assertFoundPeers();
     }
 
+    @Test
     public void testDoesNotAddNonMasterEligibleNodesFromUnicastHostsList() {
         final DiscoveryNode nonMasterNode = new DiscoveryNode("node-from-hosts-list", buildNewFakeTransportAddress(),
             emptyMap(), emptySet(), Version.CURRENT);
@@ -330,9 +328,10 @@ public class PeerFinderTests extends ESTestCase {
 
         assertFoundPeers();
 
-        assertThat(capturingTransport.capturedRequests(), emptyArray());
+        assertThat(capturingTransport.capturedRequests()).isEmpty();
     }
 
+    @Test
     public void testChecksUnicastHostsForChanges() {
         peerFinder.activate(lastAcceptedNodes);
         runAllRunnableTasks();
@@ -348,6 +347,7 @@ public class PeerFinderTests extends ESTestCase {
         assertFoundPeers(otherNode);
     }
 
+    @Test
     public void testDeactivationClearsPastKnowledge() {
         final DiscoveryNode otherNode = newDiscoveryNode("node-from-hosts-list");
         providedAddresses.add(otherNode.getAddress());
@@ -366,6 +366,7 @@ public class PeerFinderTests extends ESTestCase {
         assertFoundPeers();
     }
 
+    @Test
     public void testAddsReachableNodesFromClusterState() {
         final DiscoveryNode otherNode = newDiscoveryNode("node-in-cluster-state");
         updateLastAcceptedNodes(b -> b.add(otherNode));
@@ -377,6 +378,7 @@ public class PeerFinderTests extends ESTestCase {
         assertFoundPeers(otherNode);
     }
 
+    @Test
     public void testDoesNotAddUnreachableNodesFromClusterState() {
         final DiscoveryNode otherNode = newDiscoveryNode("node-in-cluster-state");
         updateLastAcceptedNodes(b -> b.add(otherNode));
@@ -387,6 +389,7 @@ public class PeerFinderTests extends ESTestCase {
         assertFoundPeers();
     }
 
+    @Test
     public void testAddsReachableNodesFromIncomingRequests() {
         final DiscoveryNode sourceNode = newDiscoveryNode("request-source");
         final DiscoveryNode otherKnownNode = newDiscoveryNode("other-known-node");
@@ -401,6 +404,7 @@ public class PeerFinderTests extends ESTestCase {
         assertFoundPeers(sourceNode, otherKnownNode);
     }
 
+    @Test
     public void testDoesNotAddReachableNonMasterEligibleNodesFromIncomingRequests() {
         final DiscoveryNode sourceNode = new DiscoveryNode("request-source", buildNewFakeTransportAddress(),
             emptyMap(), emptySet(), Version.CURRENT);
@@ -415,6 +419,7 @@ public class PeerFinderTests extends ESTestCase {
         assertFoundPeers(otherKnownNode);
     }
 
+    @Test
     public void testDoesNotAddUnreachableNodesFromIncomingRequests() {
         final DiscoveryNode sourceNode = newDiscoveryNode("request-source");
         final DiscoveryNode otherKnownNode = newDiscoveryNode("other-known-node");
@@ -429,6 +434,7 @@ public class PeerFinderTests extends ESTestCase {
         assertFoundPeers(sourceNode);
     }
 
+    @Test
     public void testDoesNotAddUnreachableSourceNodeFromIncomingRequests() {
         final DiscoveryNode sourceNode = newDiscoveryNode("request-source");
         final DiscoveryNode otherKnownNode = newDiscoveryNode("other-known-node");
@@ -443,6 +449,7 @@ public class PeerFinderTests extends ESTestCase {
         assertFoundPeers(otherKnownNode);
     }
 
+    @Test
     public void testRespondsToRequestWhenActive() {
         final DiscoveryNode sourceNode = newDiscoveryNode("request-source");
 
@@ -450,9 +457,9 @@ public class PeerFinderTests extends ESTestCase {
 
         peerFinder.activate(lastAcceptedNodes);
         final PeersResponse peersResponse1 = peerFinder.handlePeersRequest(new PeersRequest(sourceNode, Collections.emptyList()));
-        assertFalse(peersResponse1.getMasterNode().isPresent());
-        assertThat(peersResponse1.getKnownPeers(), empty()); // sourceNode is not yet known
-        assertThat(peersResponse1.getTerm(), is(0L));
+        assertThat(peersResponse1.getMasterNode().isPresent()).isFalse();
+        assertThat(peersResponse1.getKnownPeers()).isEmpty(); // sourceNode is not yet known
+        assertThat(peersResponse1.getTerm()).isEqualTo(0L);
 
         runAllRunnableTasks();
 
@@ -461,11 +468,12 @@ public class PeerFinderTests extends ESTestCase {
         final long updatedTerm = randomNonNegativeLong();
         peerFinder.setCurrentTerm(updatedTerm);
         final PeersResponse peersResponse2 = peerFinder.handlePeersRequest(new PeersRequest(sourceNode, Collections.emptyList()));
-        assertFalse(peersResponse2.getMasterNode().isPresent());
-        assertThat(peersResponse2.getKnownPeers(), contains(sourceNode));
-        assertThat(peersResponse2.getTerm(), is(updatedTerm));
+        assertThat(peersResponse2.getMasterNode().isPresent()).isFalse();
+        assertThat(peersResponse2.getKnownPeers()).containsExactly(sourceNode);
+        assertThat(peersResponse2.getTerm()).isEqualTo(updatedTerm);
     }
 
+    @Test
     public void testDelegatesRequestHandlingWhenInactive() {
         final DiscoveryNode masterNode = newDiscoveryNode("master-node");
         final DiscoveryNode sourceNode = newDiscoveryNode("request-source");
@@ -479,9 +487,10 @@ public class PeerFinderTests extends ESTestCase {
 
         final PeersResponse expectedResponse = new PeersResponse(Optional.of(masterNode), Collections.emptyList(), term);
         final PeersResponse peersResponse = peerFinder.handlePeersRequest(new PeersRequest(sourceNode, Collections.emptyList()));
-        assertThat(peersResponse, equalTo(expectedResponse));
+        assertThat(peersResponse).isEqualTo(expectedResponse);
     }
 
+    @Test
     public void testReceivesRequestsFromTransportService() {
         final DiscoveryNode sourceNode = newDiscoveryNode("request-source");
 
@@ -500,10 +509,10 @@ public class PeerFinderTests extends ESTestCase {
 
                 @Override
                 public void handleResponse(PeersResponse response) {
-                    assertTrue(responseReceived.compareAndSet(false, true));
-                    assertFalse(response.getMasterNode().isPresent());
-                    assertThat(response.getKnownPeers(), empty()); // sourceNode is not yet known
-                    assertThat(response.getTerm(), is(0L));
+                    assertThat(responseReceived.compareAndSet(false, true)).isTrue();
+                    assertThat(response.getMasterNode().isPresent()).isFalse();
+                    assertThat(response.getKnownPeers()).isEmpty(); // sourceNode is not yet known
+                    assertThat(response.getTerm()).isEqualTo(0L);
                 }
 
                 @Override
@@ -518,10 +527,11 @@ public class PeerFinderTests extends ESTestCase {
             });
 
         runAllRunnableTasks();
-        assertTrue(responseReceived.get());
+        assertThat(responseReceived.get()).isTrue();
         assertFoundPeers(sourceNode);
     }
 
+    @Test
     public void testRequestsPeersIncludingKnownPeersInRequest() {
         final DiscoveryNode otherNode = newDiscoveryNode("node-from-hosts-list");
         providedAddresses.add(otherNode.getAddress());
@@ -533,11 +543,12 @@ public class PeerFinderTests extends ESTestCase {
         assertFoundPeers(otherNode);
 
         final CapturedRequest[] capturedRequests = capturingTransport.getCapturedRequestsAndClear();
-        assertThat(capturedRequests.length, is(1));
+        assertThat(capturedRequests.length).isEqualTo(1);
         final PeersRequest peersRequest = (PeersRequest) capturedRequests[0].request;
-        assertThat(peersRequest.getKnownPeers(), contains(otherNode));
+        assertThat(peersRequest.getKnownPeers()).containsExactly(otherNode);
     }
 
+    @Test
     public void testAddsReachablePeersFromResponse() {
         final DiscoveryNode otherNode = newDiscoveryNode("node-from-hosts-list");
         providedAddresses.add(otherNode.getAddress());
@@ -551,7 +562,7 @@ public class PeerFinderTests extends ESTestCase {
         final DiscoveryNode discoveredNode = newDiscoveryNode("discovered-node");
         transportAddressConnector.addReachableNode(discoveredNode);
         respondToRequests(node -> {
-            assertThat(node, is(otherNode));
+            assertThat(node).isEqualTo(otherNode);
             return new PeersResponse(Optional.empty(), singletonList(discoveredNode), randomNonNegativeLong());
         });
 
@@ -559,6 +570,7 @@ public class PeerFinderTests extends ESTestCase {
         assertFoundPeers(otherNode, discoveredNode);
     }
 
+    @Test
     public void testAddsReachableMasterFromResponse() {
         final DiscoveryNode otherNode = newDiscoveryNode("node-from-hosts-list");
         providedAddresses.add(otherNode.getAddress());
@@ -571,17 +583,18 @@ public class PeerFinderTests extends ESTestCase {
         final DiscoveryNode discoveredMaster = newDiscoveryNode("discovered-master");
 
         respondToRequests(node -> {
-            assertThat(node, is(otherNode));
+            assertThat(node).isEqualTo(otherNode);
             return new PeersResponse(Optional.of(discoveredMaster), emptyList(), randomNonNegativeLong());
         });
 
         transportAddressConnector.addReachableNode(discoveredMaster);
         runAllRunnableTasks();
         assertFoundPeers(otherNode, discoveredMaster);
-        assertThat(peerFinder.discoveredMasterNode, nullValue());
-        assertFalse(peerFinder.discoveredMasterTerm.isPresent());
+        assertThat(peerFinder.discoveredMasterNode).isNull();
+        assertThat(peerFinder.discoveredMasterTerm.isPresent()).isFalse();
     }
 
+    @Test
     public void testHandlesDiscoveryOfMasterFromResponseFromMaster() {
         final DiscoveryNode otherNode = newDiscoveryNode("node-from-hosts-list");
         providedAddresses.add(otherNode.getAddress());
@@ -594,16 +607,17 @@ public class PeerFinderTests extends ESTestCase {
 
         final long term = randomNonNegativeLong();
         respondToRequests(node -> {
-            assertThat(node, is(otherNode));
+            assertThat(node).isEqualTo(otherNode);
             return new PeersResponse(Optional.of(otherNode), emptyList(), term);
         });
 
         runAllRunnableTasks();
         assertFoundPeers(otherNode);
-        assertThat(peerFinder.discoveredMasterNode, is(otherNode));
-        assertThat(peerFinder.discoveredMasterTerm, is(OptionalLong.of(term)));
+        assertThat(peerFinder.discoveredMasterNode).isEqualTo(otherNode);
+        assertThat(peerFinder.discoveredMasterTerm).isEqualTo(OptionalLong.of(term));
     }
 
+    @Test
     public void testOnlyRequestsPeersOncePerRoundButDoesRetryNextRound() {
         final DiscoveryNode sourceNode = newDiscoveryNode("request-source");
         transportAddressConnector.addReachableNode(sourceNode);
@@ -614,7 +628,7 @@ public class PeerFinderTests extends ESTestCase {
         assertFoundPeers(sourceNode);
 
         respondToRequests(node -> {
-            assertThat(node, is(sourceNode));
+            assertThat(node).isEqualTo(sourceNode);
             return new PeersResponse(Optional.empty(), singletonList(sourceNode), randomNonNegativeLong());
         });
 
@@ -630,13 +644,14 @@ public class PeerFinderTests extends ESTestCase {
         deterministicTaskQueue.advanceTime();
         runAllRunnableTasks();
         respondToRequests(node -> {
-            assertThat(node, is(sourceNode));
+            assertThat(node).isEqualTo(sourceNode);
             return new PeersResponse(Optional.empty(), singletonList(otherNode), randomNonNegativeLong());
         });
         runAllRunnableTasks();
         assertFoundPeers(sourceNode, otherNode);
     }
 
+    @Test
     public void testDoesNotReconnectToNodesOnceConnected() {
         final DiscoveryNode otherNode = newDiscoveryNode("node-from-hosts-list");
         providedAddresses.add(otherNode.getAddress());
@@ -654,6 +669,7 @@ public class PeerFinderTests extends ESTestCase {
         assertFoundPeers(otherNode);
     }
 
+    @Test
     public void testDiscardsDisconnectedNodes() {
         final DiscoveryNode otherNode = newDiscoveryNode("original-node");
         providedAddresses.add(otherNode.getAddress());
@@ -674,6 +690,7 @@ public class PeerFinderTests extends ESTestCase {
         assertFoundPeers();
     }
 
+    @Test
     public void testDoesNotMakeMultipleConcurrentConnectionAttemptsToOneAddress() {
         final DiscoveryNode otherNode = newDiscoveryNode("node-from-hosts-list");
         providedAddresses.add(otherNode.getAddress());
@@ -709,6 +726,7 @@ public class PeerFinderTests extends ESTestCase {
         assertFoundPeers(otherNode);
     }
 
+    @Test
     public void testTimesOutAndRetriesConnectionsToBlackholedNodes() {
         final DiscoveryNode otherNode = newDiscoveryNode("node-from-hosts-list");
         final DiscoveryNode nodeToFind = newDiscoveryNode("node-to-find");
@@ -744,7 +762,7 @@ public class PeerFinderTests extends ESTestCase {
         }
 
         respondToRequests(node -> {
-            assertThat(node, is(otherNode));
+            assertThat(node).isEqualTo(otherNode);
             return new PeersResponse(Optional.empty(), singletonList(nodeToFind), randomNonNegativeLong());
         });
 
@@ -754,6 +772,7 @@ public class PeerFinderTests extends ESTestCase {
         assertFoundPeers(nodeToFind, otherNode);
     }
 
+    @Test
     public void testReconnectsToDisconnectedNodes() {
         final DiscoveryNode otherNode = newDiscoveryNode("original-node");
         providedAddresses.add(otherNode.getAddress());
@@ -780,10 +799,10 @@ public class PeerFinderTests extends ESTestCase {
     private void respondToRequests(Function<DiscoveryNode, PeersResponse> responseFactory) {
         final CapturedRequest[] capturedRequests = capturingTransport.getCapturedRequestsAndClear();
         for (final CapturedRequest capturedRequest : capturedRequests) {
-            assertThat(capturedRequest.action, is(REQUEST_PEERS_ACTION_NAME));
-            assertThat(capturedRequest.request, instanceOf(PeersRequest.class));
+            assertThat(capturedRequest.action).isEqualTo(REQUEST_PEERS_ACTION_NAME);
+            assertThat(capturedRequest.request).isExactlyInstanceOf(PeersRequest.class);
             final PeersRequest peersRequest = (PeersRequest) capturedRequest.request;
-            assertThat(peersRequest.getSourceNode(), is(localNode));
+            assertThat(peersRequest.getSourceNode()).isEqualTo(localNode);
             capturingTransport.handleResponse(capturedRequests[0].requestId, responseFactory.apply(capturedRequest.node));
         }
     }
@@ -791,17 +810,17 @@ public class PeerFinderTests extends ESTestCase {
     private void assertFoundPeers(DiscoveryNode... expectedNodesArray) {
         final Set<DiscoveryNode> expectedNodes = Arrays.stream(expectedNodesArray).collect(Collectors.toSet());
         final List<DiscoveryNode> actualNodesList
-            = StreamSupport.stream(peerFinder.getFoundPeers().spliterator(), false).collect(Collectors.toList());
+            = StreamSupport.stream(peerFinder.getFoundPeers().spliterator(), false).toList();
         final HashSet<DiscoveryNode> actualNodesSet = new HashSet<>(actualNodesList);
-        assertThat(actualNodesSet, equalTo(expectedNodes));
-        assertTrue("no duplicates in " + actualNodesList, actualNodesSet.size() == actualNodesList.size());
+        assertThat(actualNodesSet).isEqualTo(expectedNodes);
+        assertThat(actualNodesSet.size() == actualNodesList.size()).as("no duplicates in " + actualNodesList).isTrue();
         assertNotifiedOfAllUpdates();
     }
 
     private void assertNotifiedOfAllUpdates() {
         final Stream<DiscoveryNode> actualNodes = StreamSupport.stream(peerFinder.getFoundPeers().spliterator(), false);
         final Stream<DiscoveryNode> notifiedNodes = StreamSupport.stream(foundPeersFromNotification.spliterator(), false);
-        assertThat(notifiedNodes.collect(Collectors.toSet()), equalTo(actualNodes.collect(Collectors.toSet())));
+        assertThat(notifiedNodes.collect(Collectors.toSet())).isEqualTo(actualNodes.collect(Collectors.toSet()));
     }
 
     private DiscoveryNode newDiscoveryNode(String nodeId) {
@@ -824,4 +843,3 @@ public class PeerFinderTests extends ESTestCase {
         assertNotifiedOfAllUpdates();
     }
 }
-
